Update 알고리즘 1주차 .md

--- a/알고리즘 1주차 .md
+++ b/알고리즘 1주차 .md
@@ -471,8 +471,21 @@ Average-case : 모든 입력 경우의 수에 대한 시간 복잡도의 평균,
 
 Best-case : 가장 이상적인 입력에 대한 복잡도를 분석하는 것으로, 유용성이 떨어져 해당 방식으로는 잘 분석하지 않음
 
+<br/>
 
+## 퀴즈 
 
+![image](https://github.com/user-attachments/assets/1bf4a384-3b91-444d-94f3-71db54a42b9f)
+
+1. 최악의 경우 n^2에 비례하는 시간이 걸리므로 -> 참
+
+2. 1번과 같은 의미로 -> 참 
+
+3. 최악의 경우 n^2에 비례하므로 Θ를 이용해서 표시 가능 -> 참
+
+4. 성질 3에 의해 이외의 모든 입력에 대해 nlogn에 비례하는 시간이 소요되므로 세타를 이용해도 됨
+
+5. 
 
 
 
