--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -1,2 +1,69 @@
 ## 점화식 
 
+점화식: 어떤 함수(보통 입력 변수를 n 등의 미지수로 표현)를 **자신보다 더 작은 변수에 대한 함수와의 관계로 표현한 식**
+
+점화식 예시 
+
+1. an = an-1 + 2
+
+2. f(n) = n f(n−1)
+
+3. f(n) = f(n−1) + f(n−2)
+
+4. f(n) = f(n/2) + n
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
