--- a/알고리즘 3-1.md
+++ b/알고리즘 3-1.md
@@ -40,7 +40,9 @@
   (2) : 가장 큰 수를 찾기 위한 비교횟수: n-1, n-2, …, 2, 1
   (3) : 교환은 상수 시간 작업
 ```
-즉, (n-1) + (n-2) + ,,, + 2 + 1 = n(n-1)/2 = 
+즉, (n-1) + (n-2) + ,,, + 2 + 1 = n(n-1)/2 = Θ(n^2)
+
+여기서 중요한 점은 정렬이 되어있던 안 되어있던 최대 요소를 확인하려면 모든 요소를 다 확인해야하기 때문에 Best case, Average case, Worst case가 모두 Θ(n^2)이다 
 
 
 
