--- a/알고리즘 3-1.md
+++ b/알고리즘 3-1.md
@@ -6,7 +6,7 @@
 
 <br/>
 
-## 선택 정렬 
+## 선택정렬 
 
 각 루프마다 
 
@@ -20,7 +20,7 @@
 
 <br/>
 
-## 선택 정렬 예시
+## 선택정렬 예시
 
 ![image](https://github.com/user-attachments/assets/5738280e-b807-4d9c-8da4-febd11c5b15b)
 
@@ -35,7 +35,7 @@
     }  
  } 
 
-✓수행 시간: 
+✓ 수행 시간: 
   (1) : for 루프는 n-1번 반복
   (2) : 가장 큰 수를 찾기 위한 비교횟수: n-1, n-2, …, 2, 1
   (3) : 교환은 상수 시간 작업
@@ -43,6 +43,39 @@
 즉, (n-1) + (n-2) + ,,, + 2 + 1 = n(n-1)/2 = Θ(n^2)
 
 여기서 중요한 점은 정렬이 되어있던 안 되어있던 최대 요소를 확인하려면 모든 요소를 다 확인해야하기 때문에 Best case, Average case, Worst case가 모두 Θ(n^2)이다 
+
+<br/>
+
+## 선택정렬 세부 알고리즘 
+
+![image](https://github.com/user-attachments/assets/71d05d0a-de60-4841-b019-9654f25b91d3)
+
+<br/>
+
+## 버블정렬
+
+정의 : 인접한 두 원소를 비교하면서 자리를 교환해 정렬하는 방법 
+
+```ruby
+
+bubbleSort(A[], n)             ▷A[1 ... n]을 정렬한다 
+{ 
+    for last ← n downto 2                               (1)
+         for i ← 1 to last-1                            (2)
+            if (A[i] > A[i+1]) then A[i]와 A[i+1] 교환  (3)
+
+}
+
+✓ 수행 시간:
+  (1) : for 루프는 n-1번 반복
+  (2) : for 루프는 각각 n-1, n-2, ... , 2, 1번 반복
+  (3) : 상수 시간 작업
+```
+
+즉, (n-1) + (n-2) + ,,, + 2 + 1 = n(n-1)/2 = Θ(n^2)
+
+삽입 정렬과 동일한 이유로 Best case, Average case, Worst case가 모두 Θ(n^2)이다
+
 
 
 
