--- a/알고리즘 3-1.md
+++ b/알고리즘 3-1.md
@@ -6,7 +6,7 @@
 
 <br/>
 
-## 선택정렬 
+## 선택 정렬 
 
 각 루프마다 
 
@@ -20,7 +20,7 @@
 
 <br/>
 
-## 선택정렬 예시
+## 선택 정렬 예시
 
 ![image](https://github.com/user-attachments/assets/5738280e-b807-4d9c-8da4-febd11c5b15b)
 
@@ -46,13 +46,13 @@
 
 <br/>
 
-## 선택정렬 세부 알고리즘 
+## 선택 정렬 세부 알고리즘 
 
 ![image](https://github.com/user-attachments/assets/71d05d0a-de60-4841-b019-9654f25b91d3)
 
 <br/>
 
-## 버블정렬
+## 버블 정렬
 
 정의 : 인접한 두 원소를 비교하면서 자리를 교환해 정렬하는 방법 
 
@@ -76,7 +76,42 @@ bubbleSort(A[], n)             ▷A[1 ... n]을 정렬한다
 
 삽입 정렬과 동일한 이유로 Best case, Average case, Worst case가 모두 Θ(n^2)이다
 
+<br/>
 
+## 버블 정렬 개선 버전 
+
+```ruby
+bubbleSort(A[], n) ▷ 앞선 버블정렬의 개선 버전 
+{ 
+    for last ← n downto 2
+       sorted = True;
+       for i ← 1 to last-1
+           if (A[i] > A[i+1]) then {
+                A[i] A[i+1];
+                sorted = False;
+          }
+     }
+     if (sorted == True) then return;
+}
+```
+
+<br/>
+
+## 삽입 정렬 
+
+정의 : 리스트를 앞에서부터 하나씩 정렬된 상태로 만들어가는 알고리즘
+
+![image](https://github.com/user-attachments/assets/f3d7034d-259f-4e5e-891b-117807b6a216)
+
+✓ 수행 시간: 
+
+1. for루프는 n-1번 반복
+
+2. 삽입은 최악의 경우 i-1회 비교
+
+✓ Worst case: 1+2+···+(n-2)+(n-1) = Θ(n2)
+✓ Average case: ½ (1+2+···+(n-2)+(n-1)) = Θ(n2)
+✓ Best case: 1+1+···+1+1 (총 n-1개) = Θ(n)
 
 
 
