Update and rename 알고리즘 3-1.md to 알고리즘 3-1 주차.md

--- a/알고리즘 3-1 주차.md
+++ b/알고리즘 3-1 주차.md
@@ -113,6 +113,13 @@ bubbleSort(A[], n) ▷ 앞선 버블정렬의 개선 버전
 ✓ Average case: ½ (1+2+···+(n-2)+(n-1)) = Θ(n2)
 ✓ Best case: 1+1+···+1+1 (총 n-1개) = Θ(n)
 
+<br/>
+
+## 삽입 정렬 예시 
+
+![image](https://github.com/user-attachments/assets/c9174364-c4e6-459c-aee4-86ab5a627fde)
+
+
 
 
 
