Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -1,1 +1,75 @@
-123
+## 병합 정렬 
+
+정의 : 분할 정복(Divide and Conquer) 방식을 사용하는 정렬 알고리즘
+
+```ruby
+mergeSort(A[ ], p, r)      
+▷A[p... r]을 정렬한다. 
+
+{ 
+    if (p< r) then{ 
+        q← (𝑝+𝑞)/2;   -----------------①▷p, q의 중간 지점 계산 
+        mergeSort(A, p, q);----------------②▷전반부 정렬 
+        mergeSort(A, q+1, r); --------------③▷후반부 정렬 
+        merge(A, p, q, r);------------------④▷병합 
+    } 
+}
+
+merge(A[ ], p, q, r) 
+{ 
+    정렬되어 있는 두 배열 A[p... q]와 A[q+1 ... r]을 합쳐
+    정렬된 하나의 배열 A[p... r]을 만든다. 
+} 
+
+```
+
+<br/>
+
+## 병힙 정렬 예시
+
+![IMG_3061](https://github.com/user-attachments/assets/e930e11b-e778-460f-823c-f8c173b38065)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
