Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -29,8 +29,25 @@ merge(A[ ], p, q, r)
 
 ![IMG_3061](https://github.com/user-attachments/assets/e930e11b-e778-460f-823c-f8c173b38065)
 
+<br/>
 
+## 병합 정렬 시간복잡도
 
+병합 정렬의 시간복잡도는 O(nlogn)이 걸린다 
+
+<풀이>
+
+배열을 나눌 때마다 크기가 절반이 되므로, 배열의 크기는 n, n/2, n/4, n/8, …, 1과 같이 줄어든다
+
+배열 크기가 n에서 시작해서 n/2^k = 1이 될 때까지 나누고, 이를 방정식으로 나타내면 n/2^k = 1이다
+
+이 방정식에서 양변에 log2를 취하면 k = logn이 되므로 배열을 크기 1까지 나누는 데 걸리는 단계 수는 logn이다
+
+따라서 병합정렬에서 분할을 하는데 O(logn) 만큼 걸리고 
+
+병합 단계에서 두 배열의 원소를 한 번씩 확인하며 처리하므로, 병합 과정의 시간 복잡도는 **O(n)** 이다
+
+즉 O(n) 을 O(logn) 만큼 반복하므로 총 시간 복잡도는 O(nlogn) 이다 
 
 
 
