--- a/알고리즘 3-1주차.md
+++ b/알고리즘 3-1주차.md
@@ -44,6 +44,8 @@
 
 여기서 중요한 점은 정렬이 되어있던 안 되어있던 최대 요소를 확인하려면 모든 요소를 다 확인해야하기 때문에 Best case, Average case, Worst case가 모두 Θ(n^2)이다 
 
+Θ 는 알고리즘의 실행 시간이 입력 크기 n에 대해 n에 비례하여 정확히 증가한다는 의미. 예를 들어, **Θ(n)은 알고리즘이 최악, 평균, 최선의 경우 모두 n에 비례**하는 시간 복잡도를 가진다는 것이다
+
 <br/>
 
 ## 선택 정렬 세부 알고리즘 
