Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -51,7 +51,7 @@ merge(A[ ], p, q, r)
 
 <br/>
 
-Best case, Average case, Wrost case 모두 Θ(nlogn)임
+**Best case, Average case, Wrost case 모두 Θ(nlogn)임**
 
 
 
