--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -1,6 +1,6 @@
 ## 병합 정렬 
 
-정의 : 분할 정복(Divide and Conquer) 방식을 사용하는 정렬 알고리즘
+정의 : 배열을 반으로 나누고, 각 부분을 재귀적으로 정렬한 후, 두 개의 정렬된 부분 배열을 병합하여 최종적으로 정렬된 배열을 생성하는 알고리즘
 
 ```ruby
 mergeSort(A[ ], p, r)      
@@ -53,8 +53,11 @@ merge(A[ ], p, q, r)
 
 **Best case, Average case, Wrost case 모두 Θ(nlogn)임**
 
+<br/>
 
+## 퀵정렬 
 
+정의 : 하나의 요소를 **피벗(pivot)** 으로 선택하여, pivot보다 작은 값들과 큰 값들을 두 개의 부분 배열로 나누고, 각 부분 배열을 재귀적으로 정렬하는 알고리즘
 
 
 
