--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -59,7 +59,22 @@ merge(A[ ], p, q, r)
 
 정의 : 하나의 요소를 **피벗(pivot)** 으로 선택하여, pivot보다 작은 값들과 큰 값들을 두 개의 부분 배열로 나누고, 각 부분 배열을 재귀적으로 정렬하는 알고리즘
 
+```ruby
+quickSort(A[], p, r)   ▷ A[p ... r]을 정렬한다 
+{ 
+    if (p < r) then { 
+        q = partition(A, p, r); ▷ 분할 
+        quickSort(A, p, q-1); ▷ 왼쪽 부분 배열 정렬 
+        quickSort(A, q+1, r); ▷ 오른쪽 부분 배열 정렬 
+    } 
+}
 
+partition(A[], p, r) 
+{ 
+    배열 A[p... r]의 원소들을 A[r]을 기준으로 양쪽으로 재배치하고 
+    A[r]이 자리한 위치를 리턴한다; 
+}
+```
 
 
 
