--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -71,7 +71,7 @@ quickSort(A[], p, r)   ▷ A[p ... r]을 정렬한다
 
 partition(A[], p, r) 
 { 
-    배열 A[p... r]의 원소들을 A[r]을 기준으로 양쪽으로 재배치하고 
+    배열 A[p... r]의 원소들을 A[r]을 기준으로 양쪽으로 재배치하고 (즉, pivot을 마지막 원소로 사용, pivot 기준은 다양함)
     A[r]이 자리한 위치를 리턴한다; 
 }
 ```
