Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -76,6 +76,21 @@ partition(A[], p, r)
 }
 ```
 
+<br/>
+
+## 세부적인 알고리즘 
+
+![스크린샷 2025-03-23 215352](https://github.com/user-attachments/assets/3b227e1f-1018-4986-8df1-60c98590e6a8)
+
+<br/>
+
+## 예시 
+
+![스크린샷 2025-03-23 215404](https://github.com/user-attachments/assets/cd2d36a3-e40c-41ea-a7e6-41b24eefdc2c)
+
+![스크린샷 2025-03-23 215411](https://github.com/user-attachments/assets/546072d6-e2b3-4c4a-a269-df4177c393e5)
+
+
 
 
 
