--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -90,6 +90,25 @@ partition(A[], p, r)
 
 ![스크린샷 2025-03-23 215411](https://github.com/user-attachments/assets/546072d6-e2b3-4c4a-a269-df4177c393e5)
 
+<br/>
+
+## 퀵 정렬 시간 복잡도 
+
+**1. Worst case : Θ(n²)**
+
+분할 과정에서 매번 최악의 피벗을 선택할 때 발생한다.
+
+이 경우, 배열은 매번 하나의 원소만 남고, 나머지 원소들은 계속 한쪽 부분으로만 치우쳐서 분할됨
+
+이처럼 비대칭적인 분할이 계속되면, 각 단계에서 비교가 n번씩 일어나고, 
+
+총 비교 횟수는 n + (n-1) + (n-2) + ... + 1이 되어 O(n²) 시간이 걸리게 되어 최악의 경우 퀵정렬의 시간 복잡도는 Θ(n²)로 평가됨
+
+
+
+
+
+
 
 
 
