Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -96,13 +96,13 @@ partition(A[], p, r)
 
 **1. Worst case : Θ(n²)**
 
-분할 과정에서 매번 최악의 피벗을 선택할 때 발생한다.
+최악의 경우는 **분할 수행 후 원소들이 pivot 앞이나 뒤쪽에만 모두 몰려있을 때**이다
 
 이 경우, 배열은 매번 하나의 원소만 남고, 나머지 원소들은 계속 한쪽 부분으로만 치우쳐서 분할됨
 
 이처럼 비대칭적인 분할이 계속되면, 각 단계에서 비교가 n번씩 일어나고, 
 
-총 비교 횟수는 n + (n-1) + (n-2) + ... + 1이 되어 O(n²) 시간이 걸리게 되어 최악의 경우 퀵정렬의 시간 복잡도는 Θ(n²)로 평가됨
+총 비교 횟수는 n + (n-1) + (n-2) + ... + 1이 되어 O(n²) 시간이 걸리게 되어 최악의 경우 퀵정렬의 시간 복잡도는 Θ(n²)로 계산된다 
 
 
 
