--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -104,12 +104,37 @@ partition(A[], p, r)
 
 총 비교 횟수는 n + (n-1) + (n-2) + ... + 1이 되어 O(n²) 시간이 걸리게 되어 최악의 경우 퀵정렬의 시간 복잡도는 Θ(n²)로 계산된다 
 
+<br/>
 
+## 정리 
 
+![image](https://github.com/user-attachments/assets/f31401cf-8874-44ef-b222-c8551456b926)
 
+<br/>
 
+## Divide and Conquer
 
+아래의 의사코드에서처럼 문제를 더 작은 사이즈의 문제로 나타내고 이를 재귀 호출로 해결한 다음 다시 합치는 형식의 알고리즘을 의미함
 
+**병합정렬 및 퀵정렬은 대표적인  divide and conquer 알고리즘**
+
+![image](https://github.com/user-attachments/assets/98ee546e-7688-4cb7-9136-f9414a9747a6)
+
+<br/>
+
+## 퀵 정렬의 장점
+
+병합정렬은 worst case에서 퀵정렬보다 앞서고 average 및 best case에서는 퀵정렬과 동일한 시간 복잡도를 가진다
+
+**그러나 퀵정렬이 일반적으로 더 빠른 수행 속도를 보이게 되는 이유는 컴퓨터 구조와 연관이 있다**
+
+▪ 실제 컴퓨터 구조 상으로 변수의 접근은 메모리 뿐 아니라 캐쉬(cache)에 의해서도 이루어지는데, 
+
+메모리보다는 cpu에 더 가까운 캐쉬에 있는 내용들이 훨씬 접근이 빠르기 때문이다 
+
+<br/>
+
+예를 들어 병합 정렬은 해당 요소를 cache에 저장해도 바로 다음 요소로 넘어가기 때문에 비효율적이지만, 퀵 정렬은 해당 텀마다 요소의 반복이 많기 때문에 cache를 효율적으로 사용할 수 있다 
 
 
 
