--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -134,9 +134,21 @@ partition(A[], p, r)
 
 <br/>
 
-예를 들어 병합 정렬은 해당 요소를 cache에 저장해도 바로 다음 요소로 넘어가기 때문에 비효율적이지만, 퀵 정렬은 해당 텀마다 요소의 반복이 많기 때문에 cache를 효율적으로 사용할 수 있다 
+병합정렬은 아래 예시와 같이 인덱스 상으로 끝에서 끝을 계속 왔다갔다 하며 정렬을 수행함
 
+즉, 낮은 인덱스의 데이터들이 캐쉬에 저장되었다가 지워졌다가 다시 큰 인덱스의 데이터들이 
 
+캐쉬에 저장되는 등의 과정을 반복하며 데이터 접근 속도 면에서 비효율성을 보임
+
+<br/>
+
+반면 퀵정렬은 처음에 기준원소에 대해 정렬한 이후에는 비교적 국소적인 부분을 대상으로 정렬을  수행하므로 cache hit ratio(찾고자 하는 정보가 캐쉬에 있을 확률)이 높아져 데이터 접근이 빠름
+
+따라서 알고리즘 상으로 분석할 때는 병합정렬이 더 우수해 보이지만 실제로 사용하는 컴퓨터 구조 상에서의 연산 속도 측면에서 퀵정렬이 일반적으로는 더 우위에 있음
+
+또한 퀵정렬은 주어진 배열 공간만으로 정렬이 가능하고 병합정렬은 추가적인 메모리가 필요함
+
+데이터 크기가 매우 커지는 경우에는 병합정렬이 상대적으로 성능이 더 우수한 경향을 보인다
 
 
 
