Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -128,7 +128,7 @@ partition(A[], p, r)
 
 **그러나 퀵정렬이 일반적으로 더 빠른 수행 속도를 보이게 되는 이유는 컴퓨터 구조와 연관이 있다**
 
-▪ 실제 컴퓨터 구조 상으로 변수의 접근은 메모리 뿐 아니라 캐쉬(cache)에 의해서도 이루어지는데, 
+실제 컴퓨터 구조 상으로 변수의 접근은 메모리 뿐 아니라 캐쉬(cache)에 의해서도 이루어지는데, 
 
 메모리보다는 cpu에 더 가까운 캐쉬에 있는 내용들이 훨씬 접근이 빠르기 때문이다 
 
