--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -189,6 +189,21 @@ c는 어떤 상수이고, log 2 = 1 이므로 T(2) ≤ 2c이다 이때, T(2)는 
 
 **마지막에 반드시 c의 범위를 명시해야함**
 
+<br/>
+
+## 마스터 정리 
+
+![image](https://github.com/user-attachments/assets/e6c3c7c3-01dd-4b25-a815-00a717c8c931)
+
+<br/>
+
+## 마스터 정리 직관적 해석 
+
+1. h(n)이 더 무거우면 h(n)이 수행 시간을 결정한다
+
+2. f(n)이 더 무거우면 f(n)이 수행 시간을 결정한다
+
+3. h(n)과 f(n)이 같은 무게이면 h(n)에 logn을 곱한 것이 수행 시간이 된다
 
 
 
