--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -205,7 +205,25 @@ c는 어떤 상수이고, log 2 = 1 이므로 T(2) ≤ 2c이다 이때, T(2)는 
 
 3. h(n)과 f(n)이 같은 무게이면 h(n)에 logn을 곱한 것이 수행 시간이 된다
 
+여기서 조심해야할 부분은
 
+마스터 정리 첫번째 유형의 f(n)/h(n) = O(1/nε) 는 단순히 h(n)이 더 무겁다는 것이 아니라, h(n)이 f(n)을 적어도 **다항식의 비율**로 압도한다는 의미
+
+예를 들어, f(n)/h(n) = O(1/ logn) 이 되면 마스터 정리 첫번째 항에 해당하지 않음, 또한 로그,지수,삼각함수 모두 불가능 
+
+**즉, n의 k제곱(k는 양수이기만 하면 됨. 즉 k자리에 로그도 가능)** 을 만족하면 마스터 정리 이용가능 
+
+<br/>
+
+이와 유사하게 마스터 정리 두번째 유형도 단순히 f(n)이 더 무겁다는 것이 아니라 **다항식 비율**이상으로 무겁다는 것을 의미함
+
+<br/>
+
+마스터 정리에서의 f(n)은 재귀 알고리즘에서 발생하는 오버헤드에 해당하며, h(n)은 반복되는 재귀 호출로 인해 base case까지 가는 총 호출횟수에 해당한다
+
+재귀적 호출의 소요시간이 오버헤드를 압도한다면 알고리즘의 수행시간은 h(n)이 결정
+
+반대로 오버헤드가 더 크다면 f(n)이 알고리즘의 수행시간을 결정함
 
 
 
