--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -225,6 +225,33 @@ c는 어떤 상수이고, log 2 = 1 이므로 T(2) ≤ 2c이다 이때, T(2)는 
 
 반대로 오버헤드가 더 크다면 f(n)이 알고리즘의 수행시간을 결정함
 
+<br/>
+
+## 마스터 정리 적용 예시 
+
+![스크린샷 2025-03-25 114613](https://github.com/user-attachments/assets/ce8545c9-639e-42f1-bf30-7c97c96748a4)
+
+<br/>
+
+## 마스터 정리 적용 심화 
+
+![스크린샷 2025-03-25 114623](https://github.com/user-attachments/assets/f5de7276-e9f7-4d42-9fac-e738dac263e6)
+
+<br/>
+
+## 퀴즈 1 
+
+![스크린샷 2025-03-25 114628](https://github.com/user-attachments/assets/314d5658-750c-4e6f-9ab9-60539e4224ce)
+
+<br/>
+
+## 풀이
+
+![IMG_3062](https://github.com/user-attachments/assets/072bc17c-ac65-45ec-8141-7fe487cbb12a)
+
+<br/>
+
+## 퀴즈 2
 
 
 
