--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -253,12 +253,25 @@ c는 어떤 상수이고, log 2 = 1 이므로 T(2) ≤ 2c이다 이때, T(2)는 
 
 ## 퀴즈 2
 
+![스크린샷 2025-03-25 114634](https://github.com/user-attachments/assets/7355e901-ca75-4149-87ce-26aff2d7fa22)
 
+<br/>
 
+## 풀이
 
+![IMG_3063](https://github.com/user-attachments/assets/2c7a7e88-6b32-4c81-b5c9-b0253a535427)
 
+<br/>
 
+## 퀴즈 3 
 
+![스크린샷 2025-03-25 114638](https://github.com/user-attachments/assets/bec9bca1-d44c-40e5-b467-d8080c71598e)
+
+<br/>
+
+## 풀이 
+
+![IMG_3064](https://github.com/user-attachments/assets/094b6a47-94be-4e01-92b2-18559e7f55fb)
 
 
 
