--- a/알고리즘 4-1주차.md
+++ b/알고리즘 4-1주차.md
@@ -34,10 +34,11 @@ heap sort(힙 정렬)은 주어진 배열을 heap으로 만든 후 최대값 또
     } 
 }
 
+
 heapify(A[], k, n)   ▷ A[k]를 루트로 하는 트리를 힙 성질을 만족하도록 수정한다.
                         이 때 A[k]의 두 자식 노드를 루트로 하는 트리들은 힙 성질을 만족한다고 가정한다.
- { 
-} 
+{
+ 
     left ←2k; right ←2k+1;
      if  (right ≤ n) then {
          if (A[left] > A[right]) then bigger ← left;
@@ -48,10 +49,16 @@ heapify(A[], k, n)   ▷ A[k]를 루트로 하는 트리를 힙 성질을 만족
 
     if  (A[bigger] > A[k]) then {
         A[k] A[bigger]) 교환;
-        heapify(A,bigger,n)
+        heapify(A,bigger,n);
+    }
+}
 ```
 
 가장 아래에서부터 확인하는 이유는 부모 자식 관계에서 오류가 발생했을 때, 자식 노드를 정렬해서 가면 오류가 발생한 위치만 바꿔주면 됨 
+
+else return은 노드 k가 리프 노드임을 확인하고 더 이상 하위 노드로 내려갈 필요가 없음을 의미
+
+단순히 함수의 실행을 종료하고 반환값은 없음 
 
 
 
