--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -209,7 +209,7 @@ c는 어떤 상수이고, log 2 = 1 이므로 T(2) ≤ 2c이다 이때, T(2)는 
 
 마스터 정리 첫번째 유형의 f(n)/h(n) = O(1/nε) 는 단순히 h(n)이 더 무겁다는 것이 아니라, h(n)이 f(n)을 적어도 **다항식의 비율**로 압도한다는 의미
 
-예를 들어, f(n)/h(n) = O(1/ logn) 이 되면 마스터 정리 첫번째 항에 해당하지 않음, 또한 로그,지수,삼각함수 모두 불가능 
+예를 들어, f(n)/h(n) = O(1/ logn) 이 되면 마스터 정리 첫번째 항에 해당하지 않음, 지수함수는 가능 
 
 **즉, n의 k제곱(k는 양수이기만 하면 됨. 즉 k자리에 로그도 가능)** 을 만족하면 마스터 정리 이용가능 
 
