Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -112,6 +112,14 @@ partition(A[], p, r)
 
 <br/>
 
+## 퀵 정렬 average case
+
+피벗이 항상 배열을 정확히 절반으로 나누지는 않지만, 분할이 비교적 균형 있게 이루어지는 경우이다
+
+**이 경우 평균적으로, 재귀 깊이는 여전히 O(log n) 수준을 유지함** 이는 분할이 심하게 불균형하지 않는 한, 재귀 깊이가 로그 수준을 넘지 않음을 의미
+
+<br/>
+
 ## Divide and Conquer
 
 아래의 의사코드에서처럼 문제를 더 작은 사이즈의 문제로 나타내고 이를 재귀 호출로 해결한 다음 다시 합치는 형식의 알고리즘을 의미함
