Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -158,6 +158,49 @@ partition(A[], p, r)
 
 데이터 크기가 매우 커지는 경우에는 병합정렬이 상대적으로 성능이 더 우수한 경향을 보인다
 
+<br/>
+
+## 정렬 정리 
+
+**1. 삽입 정렬 (Insertion Sort)**
+
+
+
+Best case: Θ(n)
+
+Average case: Θ(n²)
+
+Worst case: Θ(n²)
+
+<br/>
+
+
+
+선택 정렬 (Selection Sort)
+
+Best, Average, Worst case: Θ(n²)
+
+핵심 특징: 매번 최소값을 선택해 교환하며, 데이터가 정렬되어 있어도 동일한 성능.
+
+버블 정렬 (Bubble Sort)
+
+Best, Average, Worst case: Θ(n²)
+
+핵심 특징: 인접한 두 요소를 비교하고 교환하며 정렬, 최악의 경우 성능이 나쁨.
+
+퀵 정렬 (Quick Sort)
+
+Best, Average case: Θ(n log n)
+
+Worst case: Θ(n²)
+
+핵심 특징: 피벗을 기준으로 배열을 분할하며, 평균적으로 매우 빠름. 최악의 경우 피벗이 균형을 이루지 않으면 성능이 저하됨.
+
+병합 정렬 (Merge Sort)
+
+Best, Average, Worst case: Θ(n log n)
+
+핵심 특징: 배열을 재귀적으로 반으로 나누어 정렬하고 합침, 안정적인 성능을 보임
 
 
 
