--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -164,7 +164,7 @@ partition(A[], p, r)
 
 **1. 삽입 정렬 (Insertion Sort)**
 
-
+**리스트를 앞에서부터 하나씩 정렬된 상태로 만들어가는 알고리즘**
 
 Best case: Θ(n)
 
@@ -174,33 +174,40 @@ Worst case: Θ(n²)
 
 <br/>
 
+**2. 선택 정렬 (Selection Sort)**
 
-
-선택 정렬 (Selection Sort)
-
-Best, Average, Worst case: Θ(n²)
-
-핵심 특징: 매번 최소값을 선택해 교환하며, 데이터가 정렬되어 있어도 동일한 성능.
-
-버블 정렬 (Bubble Sort)
+**최대 또는 최솟값을 마지막 원소와 바꿈**
 
 Best, Average, Worst case: Θ(n²)
 
-핵심 특징: 인접한 두 요소를 비교하고 교환하며 정렬, 최악의 경우 성능이 나쁨.
+<br/>
 
-퀵 정렬 (Quick Sort)
+**3. 버블 정렬 (Bubble Sort)**
 
-Best, Average case: Θ(n log n)
+**인접한 두 원소를 비교하면서 자리를 교환해 정렬하는 방법**
+
+Best, Average, Worst case: Θ(n²)
+
+<br/>
+
+**4. 퀵 정렬 (Quick Sort)**
+
+**피벗 기준으로 분리하여 정렬**
+
+Best case : Θ(nlogn)
+
+Average case: Θ(nlogn)
 
 Worst case: Θ(n²)
 
-핵심 특징: 피벗을 기준으로 배열을 분할하며, 평균적으로 매우 빠름. 최악의 경우 피벗이 균형을 이루지 않으면 성능이 저하됨.
+<br/>
 
-병합 정렬 (Merge Sort)
+**5. 병합 정렬 (Merge Sort)**
 
-Best, Average, Worst case: Θ(n log n)
+**배열의 중간을 재귀적으로 반으로 나누어 정렬 후 병합**
 
-핵심 특징: 배열을 재귀적으로 반으로 나누어 정렬하고 합침, 안정적인 성능을 보임
+Best, Average, Worst case: Θ(nlogn)
+
 
 
 
