Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -160,6 +160,19 @@ partition(A[], p, r)
 
 <br/>
 
+## stable sort 
+
+stable sort : 정렬 전 동일한 값(키)을 가진 원소들의 상대적인 순서가 정렬 후에도 유지되는 정렬 알고리즘을 의미
+
+ex) (3,A),(1,B),(3,C),(2,D),(1,E) -> (1,B),(1,E),(2,D),(3,A),(3,C) => A~E까지 순서를 유지하며(인덱스를 유지하며) 정렬
+
+merge sort == stable sort 
+
+quick sort != stable sort
+
+<br/>
+
+
 ## 정렬 정리 
 
 **1. 삽입 정렬 (Insertion Sort)**
