Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -166,9 +166,9 @@ stable sort : 정렬 전 동일한 값(키)을 가진 원소들의 상대적인 
 
 ex) (3,A),(1,B),(3,C),(2,D),(1,E) -> (1,B),(1,E),(2,D),(3,A),(3,C) => A~E까지 순서를 유지하며(인덱스를 유지하며) 정렬
 
-merge sort == stable sort 
+**stable sort : 병합 정렬, 삽입 정렬, 버블 정렬**
 
-quick sort != stable sort
+**not stable sort : 선택 정렬, 퀵 정렬**
 
 <br/>
 
