Update 알고리즘 3-2주차 .md

--- a/알고리즘 3-2주차 .md
+++ b/알고리즘 3-2주차 .md
@@ -51,6 +51,14 @@ merge(A[ ], p, q, r)
 
 <br/>
 
+**또한 병합 정렬은 추가 메모리를 요구하는 연산이므로 제자리 연산이 아니다**
+
+병합 단계에서 **임시 배열**를 사용하여 두 개의 정렬된 배열을 하나로 합치므로, 추가적인 O(n) 크기의 메모리가 필요함
+
+라서, 기본적인 병합 정렬은 O(n) 추가 공간을 사용하며, 제자리 정렬(in-place sort)이 아니다 
+
+<br/>
+
 **Best case, Average case, Wrost case 모두 Θ(nlogn)임**
 
 <br/>
@@ -157,6 +165,8 @@ partition(A[], p, r)
 또한 퀵정렬은 주어진 배열 공간만으로 정렬이 가능하고 병합정렬은 추가적인 메모리가 필요함
 
 데이터 크기가 매우 커지는 경우에는 병합정렬이 상대적으로 성능이 더 우수한 경향을 보인다
+
+**하지만, linked list이면 병합 정렬이 quick보다 빠름**
 
 <br/>
 
