Update 알고리즘 4-2 주차.md

--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -59,14 +59,30 @@ def radix_sort(nums):
 예시 코드 
 
 ```ruby
+예시 코드 1 
 squares = [x**2 for x in range(10)]
 print(squares)
 
-결고 : [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]
+결과 : [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]
+
+
+예시 코드 2
+evens = [x for x in range(10) if x % 2 == 0]
+print(evens)
+
+결과 : [0, 2, 4, 6, 8]
+
+
+예시 코드 3
+pairs = [(x, y) for x in range(3) for y in range(2)]
+print(pairs)
+
+결과 : [(0, 0), (0, 1), (1, 0), (1, 1), (2, 0), (2, 1)]
 ```
 
+기수 정렬 예시에서 **buckets = [list() for _ in range(RADIX)] 이 코드는 RADIX 만큼 반복하여 빈 리스트를 만들라는 의미이다**
 
-
+즉 buckets는 [[], [], [], [], [], [], [], [], [], []] -> 빈 리스트 10개를 요소로 갖는 리스트를 생성
 
 
 
