--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -82,7 +82,29 @@ print(pairs)
 
 기수 정렬 예시에서 **buckets = [list() for _ in range(RADIX)] 이 코드는 RADIX 만큼 반복하여 빈 리스트를 만들라는 의미이다**
 
-즉 buckets는 [[], [], [], [], [], [], [], [], [], []] -> 빈 리스트 10개를 요소로 갖는 리스트를 생성
+즉 buckets는 [[], [], [], [], [], [], [], [], [], []] -> 빈 리스트 10개를 요소로 갖는 리스트를 생성 (_는 관례적으로 사용하지 않는 값으로 표현)
+
+<br/>
+
+##  tmp = int((i / placement) % RADIX)
+
+기수 정렬 코드에서 이 부분이 핵심이다 
+
+i는 nums으로 입력 받은 값을 순서대로 가져오고, placement와 radix를 이용해서 원하는 자릿수를 구하는 형식이다 
+
+예를 들어 우리는 4567 = 4x1000 + 5x100 + 6x10 + 7x1 로  자릿수를 표현할 수 있지만, 컴퓨터는 **10으로 나눈 나머지는 항상 1의 자리 숫자** 임을 이용하여 아래와 같이 자릿수를 구한다
+
+<br/>
+
+10의 자리(placement = 10) -> (4567 / 10) % 10 → 456.7 % 10 → 6.7 → int(6) 같이 placement로 소수점을 이용하여 추출하고자 하는 자릿수를 정수 부분의 일의 자리로 만들고, RADIX(=10)로 나눠 나머지(=우리가 원하는 자릿수의 값)을 구한다
+
+만약 2진수로 표현된 숫자라면, %2를 해서 자릿수를 구해야한다
+
+<br/>
+
+수학적으로 접근해보면, 나누기는 빼기의 전체 횟수와 같다. 10진수 기준으로 한 자릿수는 0~9 까지 10이 가득차야 다음 단계로 넘어가는 것처럼 
+
+가장 위에서부터 10을 계속 빼내어 나온 나머지를 이용한 원리이다
 
 
 
