--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -106,7 +106,11 @@ i는 nums으로 입력 받은 값을 순서대로 가져오고, placement와 rad
 
 가장 위에서부터 10을 계속 빼내어 나온 나머지를 이용한 원리이다
 
+<br/>
 
+## buck = buckets[b]
+
+위 코드에서 
 
 
 
