Update 알고리즘 4-2 주차.md

--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -110,7 +110,9 @@ i는 nums으로 입력 받은 값을 순서대로 가져오고, placement와 rad
 
 ## buck = buckets[b]
 
-위 코드에서 
+위 코드에서 buckets이 리스트 형태 이므로 buck의 타입도 리스트가 됨 
+
+이후 0번째 부터 차례대로 대입함 
 
 
 
