--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -114,12 +114,55 @@ i는 nums으로 입력 받은 값을 순서대로 가져오고, placement와 rad
 
 이후 0번째 부터 차례대로 대입함 
 
+<br/>
 
+## Counting Sort(계수 정렬)
 
+원소의 값의 범위가 정해져 있고 좁을 때 매우 효율적인 알고리즘 
 
+시간복잡도 : O(n)
 
+```ruby
+countingSort(A, B, n)
+▷ A[1…n]: 입력 배열, 모든 원소는 1~k의 값을 갖는다고 가정
+▷ B[1…n]: 배열 A를 정렬한 결과
 
+{
+    for i = 1 to k
+        C[i] ← 0;
 
+    for j = 1 to n
+        C[A[j]]++;
+
+    ▷ 이 시점에서의 C[i] : 값이 i인 원소의 총 수
+
+    for i = 1 to k
+        C[i] ← C[i] + C[i-1];
+
+    ▷ 이 시점에서의 C[i] : i보다 작거나 같은 원소의 총 개수
+
+    for j ← n downto 1 {
+        B[C[A[j]]] ← A[j];
+        C[A[j]]--;
+    }
+}
+```
+
+## C[i] ← C[i] + C[i-1]
+
+위 코드의 목적은 i번째까지 원소가 얼마나 있는지(쉽게 말해 내 앞에 몇명이 있는지) 파악하기 위함이다 
+
+입력 배열이 A = [2, 1, 3, 1, 2] 일 때, C[A[j]]++ 를 시행하면 C = [0, 2, 2, 1] 가 나온다 (인덱스 0은 무시 2번째 2가 1의 개수를 의미)
+
+이후 C[i] ← C[i] + C[i-1] 이 코드를 실행하면, 최종 C 배열: C = [0, 2, 4, 5]가 나온다 (동일하게 인덱스 0 무시)
+
+<br/>
+
+이렇게 되면, 각각 원소 앞에 얼마나 있는지가 나오게 되고 해당 번호로 인덱스를 넣어준다(ex: 입력 배열 2는 인덱스 4로 값이 들어감)
+
+마지막에 C[A[j]]-- 이 코드를 시행하게 되는데, 입력 배열 2가 인덱스 4로 값이 들어가고 인덱스를 하나를 빼서 또 다른 2가 존재하면 그 자리에 넣어주는 식이다 
+
+**즉, 각 원소의 앞에 있는 값들을 모두 구해서 위에서 부터 하나씩 넣어주는 구조임** 
 
 
 
