--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -164,6 +164,27 @@ countingSort(A, B, n)
 
 **즉, 각 원소의 앞에 있는 값들을 모두 구해서 위에서 부터 하나씩 넣어주는 구조임** 
 
+<br/>
+
+## Counting Sort(계수 정렬) 예시 
+
+![counting_sort_combined](https://github.com/user-attachments/assets/62b184cd-9442-4e64-8596-64294d948cb6)
+
+<br/>
+
+Counting sort는 기본적으로 stable sort 이지만
+
+배열에 동일한 값이 존재하지 않는다면, 아래와 같이 stable sort의 성질을 포기해도 됨 
+
+```ruby
+for i in range(k + 1):  # k는 입력 배열의 최댓값
+    for _ in range(C[i]):
+        출력.append(i)
+```
+
+ㅇ
+
+
 
 
 
