--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -182,7 +182,9 @@ for i in range(k + 1):  # k는 입력 배열의 최댓값
         출력.append(i)
 ```
 
-ㅇ
+**여기서 주의할 점은 이중 for문이라고 해서 반드시 O(n^2)은 아니다 -> 어떤 거라도 당연하게 생각하지 x**
+
+위 코드를 보면 i ~ k+1은 해당 인덱스의 접근이고 단순히 배열 C에 있는 n개의 요소를 출력하는 것이기 때문에 O(n)만큼 걸림
 
 
 
