Update 알고리즘 4-2 주차.md

--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -186,6 +186,11 @@ for i in range(k + 1):  # k는 입력 배열의 최댓값
 
 위 코드를 보면 i ~ k+1은 해당 인덱스의 접근이고 단순히 배열 C에 있는 n개의 요소를 출력하는 것이기 때문에 O(n)만큼 걸림
 
+<br/>
+
+## 시간복잡도 정리 
+
+![image](https://github.com/user-attachments/assets/8a6c9c36-7e45-4c02-afbb-10f03af10768)
 
 
 
