--- a/알고리즘 4-2 주차.md
+++ b/알고리즘 4-2 주차.md
@@ -1,4 +1,4 @@
-## Radix sort(기수 정렬)
+000## Radix sort(기수 정렬)
 
 기수 정렬 : 최대 k까지의 자릿수를 갖는 원소들을 정렬할 때 사용할 수 있는 O(n) 정렬의 일종
 
@@ -192,9 +192,30 @@ for i in range(k + 1):  # k는 입력 배열의 최댓값
 
 ![image](https://github.com/user-attachments/assets/8a6c9c36-7e45-4c02-afbb-10f03af10768)
 
+<br/>
 
+## 버킷 정렬 (Bucket sort)
 
+Bucket sortor bin sort)는 데이터가 비교적 균등하게 분포되어 있는 상황에서 쓸 수 있는 O(n) 정렬임
 
+K개의 bucket들을 만들고 데이터를 구간에 따라 각 bucket에 넣은 다음
+
+각 bucket은 범위가 제한되어 있다는 점을 활용하여 O(n) 정렬을 수행
+
+<br/>
+
+## 버킷 정렬 예시 코드 
+
+```ruby
+function bucketSort(array, k) is
+    buckets ← new array of k empty lists
+    M ← 1 + the maximum key value in array
+    for i = 0 to length(array)
+        insert array[i] into buckets[floor(k × array[i] / M)]
+    for i = 0 to k
+        nextSort(buckets[i])     # 각 버킷 내부 정렬
+    return concat(buckets[0] ~ buckets[k])
+```
 
 
 
