--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -1,1 +1,77 @@
-123
+## record and field
+
+**record(레코드) : 개체에 대해 수집된 모든 정보를 포함하고 있는 저장 단위**
+
+사람의 레코드 예시: 주민번호, 이름, 집주소, 집 전화번호, 직장 전화번호, 휴대폰 번호, 최종 학력, 연소득, 가족 (상황 등의 정보 포함)
+
+<br/>
+
+**field(필드) : 레코드에서 각각의 정보를 나타내는 부분**
+
+예시 : 위 사람의 레코드에서 각각의 정보를 나타내는 부분
+
+<br/>
+
+##  검색키(search key) 또는 키(key)
+
+검색키(search key or key) : 다른 레코드와 중복되지 않도록 각 레코드를 대표할 수 있는 필드
+
+키는 하나의 필드로 이루어질 수도 있고, 두 개 이상의 필드로 이루어질 수도 있다
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
