--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -18,7 +18,13 @@
 
 키는 하나의 필드로 이루어질 수도 있고, 두 개 이상의 필드로 이루어질 수도 있다
 
+<br/>
 
+##  검색 트리(search tree)
+
+각 노드가 규칙에 맞도록 하나씩의 키를 갖고 있어서 해당 레코드가 저장된 위치를 알 수 있다
+
+검색 트리는 이름과 같이 검색을 위한 자료구조로써 최대 몇 개의 자식 노드로 분기를 할 수 있느냐에 따라 이진 검색 트리 및 다진 검색 트리로 나뉨
 
 
 
