--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -26,10 +26,37 @@
 
 검색 트리는 이름과 같이 검색을 위한 자료구조로써 최대 몇 개의 자식 노드로 분기를 할 수 있느냐에 따라 이진 검색 트리 및 다진 검색 트리로 나뉨
 
+<br/>
 
+## Binary Search Tree(이진 검색 트리)
 
+이진 검색 트리의 규칙은 다음과 같다 
 
+1. 모든 노드는 서로 다른 키 값을 가진다 → 즉, 중복된 값은 없다
 
+2. 모든 노드는 최대 두 개의 자식 노드만 가진다 → 자식의 수가 0,1,2 개 중 하나여야 함
+
+3. 왼쪽 자식 < 부모 < 오른쪽 자식
+
+<br/>
+
+leaf node : 자식이 없는 노드 -> NIL (null) 로 간주
+
+<br/>
+
+## Binary Search Tree(이진 검색 트리) 검색 알고리즘 
+
+```ruby
+treeSearch(t, x)
+▷ t: 트리의 루트 노드
+▷ x: 검색하고자 하는 키
+{
+    if (t = NIL or key[t] = x) then return t;
+    if (x < key[t])
+        then return treeSearch(left[t], x);
+    else return treeSearch(right[t], x);
+}
+```
 
 
 
