--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -53,12 +53,14 @@ treeSearch(t, x)
 {
     if (t = NIL or key[t] = x) then return t;
     if (x < key[t])
-        then return treeSearch(left[t], x);
-    else return treeSearch(right[t], x);
+        then return treeSearch(left[t], x); ▷ 찾고자 하는 값이 현재 노드보다 작으면 → 왼쪽 자식 노드에서 계속 탐색
+    else return treeSearch(right[t], x); ▷ 찾고자 하는 값이 현재 노드보다 크면 → 오른쪽 자식 노드로 이동
 }
 ```
 
+이진 검색 트리에서의 성공적인 검색은 record가 있는 노드에서 검색이 끝나고 원하는 record를 반환함
 
+이진 검색 트리에서의 실패한 검색은 리프 노드에서조차 자식 노드로의 tree search를 호출하게 되며 따라서 NIL에서 반환하고 끝나게 됨
 
 
 
