--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -62,8 +62,33 @@ treeSearch(t, x)
 
 이진 검색 트리에서의 실패한 검색은 리프 노드에서조차 자식 노드로의 tree search를 호출하게 되며 따라서 NIL에서 반환하고 끝나게 됨
 
+<br/>
 
+## ## Binary Search Tree(이진 검색 트리) 검색 알고리즘 
 
+```ruby
+treeInsert(t, x) 
+▷ t: 트리의 루트 노드
+▷ x: 삽입하고자 하는 키
+▷ 작업 완료 후 루트 노드의 포인터를 리턴한다
+{ 
+    if (t = NIL) then { 
+        key[r] ← x; 
+        left[r] ← NIL; 
+        right[r] ← NIL;     ▷ r : 새 노드 
+        return r; 
+    } 
+    if (x < key(t)) 
+        then {left[t] ← treeInsert(left[t], x); return t;} 
+        else {right[t] ← treeInsert(right[t], x); return t;}
+}
+```
+
+<br/>
+
+예시 : [30, 20, 25, 40, 10, 35] 순서대로 삽입하는 경우
+
+![image](https://github.com/user-attachments/assets/3a2fd0dd-8b80-4d47-b7f0-88c8dc7c6b3f)
 
 
 
