--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -64,7 +64,7 @@ treeSearch(t, x)
 
 <br/>
 
-## ## Binary Search Tree(이진 검색 트리) 검색 알고리즘 
+## Binary Search Tree(이진 검색 트리) 검색 알고리즘 
 
 ```ruby
 treeInsert(t, x) 
@@ -90,8 +90,46 @@ treeInsert(t, x)
 
 ![image](https://github.com/user-attachments/assets/3a2fd0dd-8b80-4d47-b7f0-88c8dc7c6b3f)
 
+<br/>
 
+## 이진검색 트리에서의 삽입 비재귀 버전
 
+```ruby
+treeInsert(t, x)
+▷ t: 트리의 루트 노드
+▷ x: 삽입하고자 하는 키
+{
+    key[r] ← x; 
+    left[r] ← NIL; 
+    right[r] ← NIL;     ▷ 새 노드 r를 만들고 x를 저장
+
+    if (t = NIL) then ▷ 루트 노드가 비어 있으면 새 노드 r을 루트로 지정
+        root ← r;
+    else {
+        p ← NIL; 
+        tmp ← t;
+        
+        while (tmp ≠ NIL) { ▷ 재귀 부분을 while로 변경 
+            p ← tmp;
+            if (x < key[tmp]) then 
+                tmp ← left[tmp];
+            else 
+                tmp ← right[tmp];
+        }
+
+        if (x < key[p]) then 
+            left[p] ← r;
+        else 
+            right[p] ← r;
+    }
+}
+```
+
+위 while문 코드를 직관적으로 해석하면 p는 tmp의 부모 노드이다
+
+tmp가 먼저 NIL에 도달하면 while이 종료되는데, 이 때, p가 leaf node에 도착하고, tmp가 p의 자식은 NIL에 도달한 상황이다 
+
+마지막 if문에서 새로운 노드를 왼쪽에 넣을 것인지 오른쪽에 넣을 것인지 결정함
 
 
 
