--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -42,6 +42,8 @@
 
 leaf node : 자식이 없는 노드 -> NIL (null) 로 간주
 
+또한 **시간 복잡도는 평균적으로 O(log n) 이지만, 최악의 경우(선형적인 경우) O(n) 만큼 걸린다**
+
 <br/> 
 
 ## Binary Search Tree(이진 검색 트리) 검색 알고리즘 
@@ -131,11 +133,19 @@ tmp가 먼저 NIL에 도달하면 while이 종료되는데, 이 때, p가 leaf n
 
 마지막 if문에서 새로운 노드를 왼쪽에 넣을 것인지 오른쪽에 넣을 것인지 결정함
 
+<br/>
 
+## 재귀 함수보다 반복분이 더 효율적인 이유 
 
+재귀함수는 코드의 가독성이 향상되지만, **스택 오버플로우가 발생한다**
 
+스택 오버플로우(Stack Overflow) : 프로그램이 **호출 스택(call stack)** 을 너무 많이 사용해서 시스템이 허용한 스택 공간을 초과했을 때 발생하는 오류
 
+재귀 함수는 호출될 때마다 매개변수(함수 매개변수를 하나씩 내려가면서 전달하는 과정), 지역 변수, 복귀 주소 등 호출 정보를 스택에 push 한다
 
+직관적으로 해석하면 컴퓨터는 지금 이 함수에서 무슨 일이 있었는지 기억하고, 나중에 돌아와서 다시 여기부터 이어 계산한다고 생각함 
+
+하지만 재귀함수가 진행될수록 값이 너무 커지면 용량이 초과됨 (ex: 파이썬은 재귀함수를 최대 1000번 호출 가능)
 
 
 
