--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -147,7 +147,17 @@ tmp가 먼저 NIL에 도달하면 while이 종료되는데, 이 때, p가 leaf n
 
 하지만 재귀함수가 진행될수록 값이 너무 커지면 용량이 초과됨 (ex: 파이썬은 재귀함수를 최대 1000번 호출 가능)
 
+<br/>
 
+## Binary search tree 삭제 
+
+이진 검색 트리에서의 삭제는 아래 3가지 경우에 따라 다르게 처리함
+
+Case 1 : r이 리프 노드인 경우 
+
+Case 2 : r의 자식 노드가 하나인 경우
+
+Case 3 : r의 자식 노드가 두 개인 경우
 
 
 
