--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -159,8 +159,28 @@ Case 2 : r의 자식 노드가 하나인 경우
 
 Case 3 : r의 자식 노드가 두 개인 경우
 
+<br/>
 
+```ruby
+Sketch-TreeDelete(t, r) 
+▷ t: 트리의 루트 노드
+▷ r: 삭제하고자 하는 노드
+{ 
+    if (r이 리프 노드) then
+        그냥 r을 버린다;                     ▷ Case 1
 
+    else if (r의 자식이 하나만 있음) then
+        r의 부모가 r의 자식을 직접 가리키도록 한다;   ▷ Case 2
+
+    else
+        r의 오른쪽 서브트리의 최소원소 노드 s를 삭제하고,
+        s를 r 자리에 놓는다;               ▷ Case 3
+}
+```
+
+마지막 else 문에서 (case 3) 오른쪽 서브트리의 최솟값을 선택하거나, 왼쪽 서브트리의 최댓값을 선택해도 된다
+
+강의에서는 오른쪽 서브트리의 최댓값을 기준으로 설명함 
 
 
 
