--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -182,17 +182,25 @@ Sketch-TreeDelete(t, r)
 
 강의에서는 오른쪽 서브트리의 최댓값을 기준으로 설명함 
 
+<br/>
 
+## case 1 
 
+![스크린샷 2025-04-09 201848](https://github.com/user-attachments/assets/1314284c-561e-43f6-947b-67025bcef814)
 
+<br/>
 
+## case 2
 
+![스크린샷 2025-04-09 201857](https://github.com/user-attachments/assets/1cfbdab1-aadb-4d26-aac4-c6092de75860)
 
+<br/>
 
+## case 3 
 
+![스크린샷 2025-04-09 201916](https://github.com/user-attachments/assets/0b9228fa-e141-4912-9536-0344bc7909ee)
 
-
-
+![스크린샷 2025-04-09 201931](https://github.com/user-attachments/assets/348e1b90-ebae-4c7b-989e-43ab9c53799b)
 
 
 
