--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -161,6 +161,8 @@ Case 3 : r의 자식 노드가 두 개인 경우
 
 <br/>
 
+## Binary search tree 삭제 의사코드 
+
 ```ruby
 Sketch-TreeDelete(t, r) 
 ▷ t: 트리의 루트 노드
@@ -202,9 +204,44 @@ Sketch-TreeDelete(t, r)
 
 ![스크린샷 2025-04-09 201931](https://github.com/user-attachments/assets/348e1b90-ebae-4c7b-989e-43ab9c53799b)
 
+<br/>
 
+## Binary search tree 삭제 알고리즘 
 
+```ruby
+treeDelete(t, r, p)
+{
+    if (r = t) then root ← deleteNode(t);          ▷ r이 루트 노드인 경우
+    else if (r = left[p])                          ▷ r이 p의 왼쪽 자식
+        then left[p] ← deleteNode(r);
+    else right[p] ← deleteNode(r);                 ▷ r이 p의 오른쪽 자식
+}
 
+deleteNode(r)
+{
+    if (left[r] = right[r] = NIL)                  ▷ Case 1: 리프 노드
+        then return NIL;
+    else if (left[r] = NIL and right[r] ≠ NIL)     ▷ Case 2-1: 오른쪽 자식만
+        then return right[r];
+    else if (left[r] ≠ NIL and right[r] = NIL)     ▷ Case 2-2: 왼쪽 자식만
+        then return left[r];
+    else {                                         ▷ Case 3: 두 자식 모두 있을 때
+        s ← right[r];
+        while (left[s] ≠ NIL) {
+            parent ← s;
+            s ← left[s];
+        }
+        key[r] ← key[s];
+
+        if (s = right[r]) then
+            right[r] ← right[s];
+        else
+            left[parent] ← right[s];
+
+        return r;
+    }
+}
+```
 
 
 
