--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -243,6 +243,11 @@ deleteNode(r)
 }
 ```
 
+<br/>
+
+## case 3 설명 
+
+![IMG_3078](https://github.com/user-attachments/assets/50e7942f-3495-46a3-b0e2-b2174af27857)
 
 
 
