--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -1,1 +1,82 @@
-123
+## 레드 블랙 트리 
+
+binary search tree의 최악의 시간 복잡도 문제점을 해결하기 위해 균형 잡힌 트리를 유지하는 자료구조가 필요함 
+
+-> 이런 이유로 만들어진 것이 레드 블랙 트리이다 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
