--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -2,9 +2,21 @@
 
 binary search tree의 **최악의 시간 복잡도 문제점을 해결하기 위해 균형 잡힌 트리를 유지하는 자료구조가 필요함**
 
--> 이런 이유로 만들어진 것이 **레드 블랙 트리이다**
+이런 이유로 만들어진 것이 **레드 블랙 트리이다**
 
+<br/>
 
+레드 블랙 트리는 균형 잡힌 binary serach tree의 일종으로 모든 노드에 대해 다음과 같은 성질을 만족해야 한다 
+
+1. 루트는 블랙이다
+
+2. 모든 리프 노드는 블랙이다 (여기서 리프는 NIL를 의미)
+
+3. 노드가 레드이면 그 노드의 자식은 반드시 블랙이다 (연속적인 레드 불가, 연속적인 블랙 가능)
+
+4. 루트 노드에서 임의의 리프 노드에 이르는 경로에서 만나는 블랙 노드의 수는 모두 같다
+
+5. 새로 삽입되는 노드는 레드이다 (블랙 노드 기준으로 봤을 때, 트리의 높이가 변하지 않기 때문)
 
 
 
