--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -18,11 +18,35 @@ binary search tree의 **최악의 시간 복잡도 문제점을 해결하기 위
 
 5. 새로 삽입되는 노드는 레드이다 (블랙 노드 기준으로 봤을 때, 트리의 높이가 변하지 않기 때문)
 
+<br/>
 
+## 레드 블랙 트리의 회전 
 
+이진 검색 트리에서 정의되는 연산 종류 중 하나이다
 
+특정 노드를 기준으로 왼쪽 혹은 오른쪽 회전이 가능하며, 회전 대상이 되는 노드는 자식 노드로 내려가고 자식 노드가 올라와 원래 노드를 대체한다
 
+![image](https://github.com/user-attachments/assets/64558dab-5bb2-466c-adfe-8a0f63f9d712)
 
+<br/>
+
+## 레드 블랙 트리 회전 알고리즘 
+
+```ruby
+LEFT-ROTATE(T, x)
+1   y = x.right                           // y의 왼쪽 서브트리를 x의 오른쪽 자식으로 이동
+2   x.right = y.left                      //
+3   if y.left ≠ T.nil                     // y의 왼쪽 서브트리가 비어 있지 않다면
+4       y.left.p = x                      // 해당 서브트리의 부모를 x로 설정
+5   y.p = x.p                             // y의 부모를 x의 부모로 설정
+6   if x.p == T.nil                       // 만약 x가 루트였다면
+7       T.root = y                        // 이제 y가 루트가 됨
+8   elseif x == x.p.left                  // x가 부모의 왼쪽 자식이었다면
+9       x.p.left = y                      // y를 부모의 왼쪽 자식으로 설정
+10  else x.p.right = y                    // 그렇지 않으면 y를 부모의 오른쪽 자식으로 설정
+11  y.left = x                            // x를 y의 왼쪽 자식으로 설정
+12  x.p = y                               // x의 부모를 y로 설정
+```
 
 
 
