--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -34,8 +34,8 @@ binary search tree의 **최악의 시간 복잡도 문제점을 해결하기 위
 
 ```ruby
 LEFT-ROTATE(T, x)
-1   y = x.right                           // y의 왼쪽 서브트리를 x의 오른쪽 자식으로 이동
-2   x.right = y.left                      //
+1   y = x.right                          
+2   x.right = y.left                      // y의 왼쪽 서브트리를 x의 오른쪽 자식으로 이동
 3   if y.left ≠ T.nil                     // y의 왼쪽 서브트리가 비어 있지 않다면
 4       y.left.p = x                      // 해당 서브트리의 부모를 x로 설정
 5   y.p = x.p                             // y의 부모를 x의 부모로 설정
