--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -48,6 +48,9 @@ LEFT-ROTATE(T, x)
 12  x.p = y                               // x의 부모를 y로 설정
 ```
 
+<br/>
+
+![IMG_3080](https://github.com/user-attachments/assets/f0d64402-5ccf-49cf-97e2-18d2101a69b6)
 
 
 
