--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -50,14 +50,32 @@ LEFT-ROTATE(T, x)
 
 <br/>
 
-![IMG_3080](https://github.com/user-attachments/assets/f0d64402-5ccf-49cf-97e2-18d2101a69b6)
+![IMG_3081](https://github.com/user-attachments/assets/c0f737b4-3254-409f-aafb-b97e8ce960ae)
+
+<br/>
+
+## 레드 블랙 트리에서의 삽입
 
 
+![image](https://github.com/user-attachments/assets/f93d0ee7-659b-443c-8e29-c56702c5aa98)
 
+𝑝2와 𝑥(삽입된 노드)의 형제 노드는 반드시 블랙이다 -> 레드 블랙 특성 ③에 의해 부모-자식 노드가 모두 레드일 수는 없기 때문
 
+𝑝의형제 노드 𝑠의 색상에 따라 두 가지 케이스로 나눔
 
+Case 1: 𝑠가 레드
 
+Case 2: 𝑠가 블랙
 
+<br/>
+
+## Case 1: 𝑠가 레드
+
+![IMG_3082](https://github.com/user-attachments/assets/11885474-fb56-4fd5-bd2f-a94801c26f06)
+
+𝑝와 𝑠를 블랙으로 바꾸고 𝑝2를 레드로 바꾼다. 만약 𝑝2가 루트이면 𝑝2를 블랙으로 둔다.
+
+𝑝2가 루트가 아닐 때 𝑝2에서 레드 블랙 특성 문제가 발생할 수 있으므로 재귀적 호출을 통해 이를 해결한다.
 
 
 
