--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -77,11 +77,21 @@ Case 2: 𝑠가 블랙
 
 𝑝2가 루트가 아닐 때 𝑝2에서 레드 블랙 특성 문제가 발생할 수 있으므로 재귀적 호출을 통해 이를 해결한다.
 
+<br/>
 
+## Case 2-1: 𝑠가 블랙이고 𝑥가 오른쪽 자식에 해당
 
+![image](https://github.com/user-attachments/assets/e49c31b6-10f3-4af8-9280-316ddaf77a50)
 
+𝑝를 기준으로 왼쪽으로 회전하면 Case 2-2에 해당하게 되며 이후 설명할 Case 2-2 해결방식을 통해 레드 블랙 특성을 만족하도록 한다
 
+<br/>
 
+## Case 2-2: 𝑠가 블랙이고 𝑥가 왼쪽 자식에 해당
+
+![image](https://github.com/user-attachments/assets/b82d40a9-8e1c-4a0e-9e3c-af0ae7fa40d6)
+
+𝑝2를 기준으로 오른쪽으로 회전하고 𝑝2와 𝑝의 색상을 서로 바꾼다
 
 
 
