--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -93,14 +93,65 @@ Case 2: 𝑠가 블랙
 
 𝑝2를 기준으로 오른쪽으로 회전하고 𝑝2와 𝑝의 색상을 서로 바꾼다
 
+## 삽입 알고리즘 
+
+```ruby
+RB-INSERT(T, z)
+x = T.root                          // z와 비교할 노드
+y = T.nil                           // y는 z의 부모가 될 노드
+while x ≠ T.nil                     // 리프 노드에 도달할 때까지 내려감
+    y = x
+    if z.key < x.key
+        x = x.left
+    else x = x.right
+z.p = y                             // 위치를 찾았으므로 z의 부모를 y로 설정
+if y == T.nil                       // 트리가 비어있었던 경우
+    T.root = z
+elseif z.key < y.key                // z가 y의 왼쪽 자식인지 오른쪽 자식인지 결정
+    y.left = z
+else y.right = z
+z.left = T.nil                     // z의 두 자식은 sentinel 노드로 설정
+z.right = T.nil
+z.color = RED                      // 새로 삽입된 노드는 항상 빨간색
+RB-INSERT-FIXUP(T, z)             // 레드-블랙 속성 위반을 수정
 
 
+RB-INSERT-FIXUP(T, z)
+while z.p.color == RED                            // z의 부모가 빨간색인 동안
+    if z.p == z.p.p.left                          // z의 부모가 왼쪽 자식인지 확인
+        y = z.p.p.right                           // y는 z의 삼촌 노드
+        if y.color == RED                         // 부모와 삼촌이 모두 빨간색이면
+            z.p.color = BLACK
+            y.color = BLACK
+            z.p.p.color = RED
+            z = z.p.p                              // z를 조부모로 이동
+        else
+            if z == z.p.right                      // case 2: z가 오른쪽 자식인 경우
+                z = z.p
+                LEFT-ROTATE(T, z)
+            z.p.color = BLACK                      // case 3
+            z.p.p.color = RED
+            RIGHT-ROTATE(T, z.p.p)
+    else                                           // 위의 case의 mirror version (왼↔오 교환)
+        y = z.p.p.left
+        if y.color == RED                          // case 1
+            z.p.color = BLACK
+            y.color = BLACK
+            z.p.p.color = RED
+            z = z.p.p
+        else
+            if z == z.p.left                       // case 2
+                z = z.p
+                RIGHT-ROTATE(T, z)
+            z.p.color = BLACK                      // case 3
+            z.p.p.color = RED
+            LEFT-ROTATE(T, z.p.p)
+T.root.color = BLACK                               // 루트는 항상 검정색
+```
 
+![IMG_3085](https://github.com/user-attachments/assets/67c06499-c2f4-4541-ab96-72388102b776)
 
-
-
-
-
+![IMG_3084](https://github.com/user-attachments/assets/84f19f48-b9b2-47da-97c8-e3c7a151b80f)
 
 
 
