--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -153,15 +153,44 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 ![IMG_3084](https://github.com/user-attachments/assets/84f19f48-b9b2-47da-97c8-e3c7a151b80f)
 
+<br/>
 
+## 레드 블랙 트리에서의 삭제
 
+기본적으로는 이진 검색 트리에서의 삭제와 같이 진행하고
 
+레드 블랙 특성에 문제가 생길 시 이를 고쳐주는 연산을 추가로 수행함
 
+특히, 자식 노드가 두 개인 노드를 삭제 할 때는 **오른쪽 자식을 루트로 하는 서브트리에서 최소값을 구하여** 삭제 대상 노드와 서로 값을 바꾼 후 서브트리 내 최소값이었던 노드를 삭제한다
 
+이 때 노드의 값만 바꾸고 색상을 유지한다면 레드 블랙 특성에 영향을 주지 않는다
 
+따라서 레드 블랙 특성에 문제가 생길 수 있는 경우는 서브트리 내에서 노드를 삭제하고 난 이후인데, 서브트리 내 최소값을 갖는 노드는 왼쪽 자식 노드가 없으므로 자식이 
+하나이거나 혹은 아예 없다
 
+즉, 레드 블랙 트리에서의 삭제 문제는 **삭제 대상 노드의 자식이 없거나 하나인 경우만으로 한정**해서 어떤 케이스들이 생길 수 있고 어떻게 해결할지만 생각해도 된다
 
+<br/>
 
+## 가능한 모든 삭제 경우
+
+아래 정리에서 x의 서브트리에 -1이 의미하는 것은 블랙 노드 하나가 부족해서 높이 문제가 발생했다는 의미 
+
+**즉, 삭제를 했을 때 문제가 생기는 모든 경우를 정리함**
+
+![IMG_3086 (1)](https://github.com/user-attachments/assets/aab62f5c-c078-4999-b81c-ccf46c65b68f)
+
+![IMG_3087](https://github.com/user-attachments/assets/1122757b-1af8-422d-9578-f692cce13ec0)
+
+<br/>
+
+## case 1-1 
+
+![image](https://github.com/user-attachments/assets/7d8e8668-6ed7-4236-9a99-f3abed0b8bef)
+
+해결 방법 : **𝑝,𝑠의 색상을 바꿈**
+
+이렇게 되면 𝑠를 통과하는 경로의 블랙 노드 수는 변함없고, 𝑥를통과하는 경로의 블랙 노드 수는 하나 더 추가되어 -1에서 0으로 보정됨
 
 
 
