--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -192,9 +192,20 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 이렇게 되면 𝑠를 통과하는 경로의 블랙 노드 수는 변함없고, 𝑥를통과하는 경로의 블랙 노드 수는 하나 더 추가되어 -1에서 0으로 보정됨
 
+<br/>
+
+## case *-2 
+
+![image](https://github.com/user-attachments/assets/a688718d-c28b-44f1-8dae-9382ee189c09)
+
+
+해결 방법 : **𝑝를중심으로 왼쪽으로 회전하고 𝑝,𝑠의 색상을 바꾼 다음 𝑟의 색상을 블랙으로 바꾼다**
 
 
 
+𝑥를 지나는 경로는 블랙 노드 하나가 추가되었고, 각 번호로 매겨진 나머지 서브트리들의 경로에서는 블랙 노드 수 변화가 없다
+
+또한, p가 어떤 색이든, 전환 후 항상 black인 s와 바꾸기 때문에 p가 반드시 black이 된다 
 
 
 
