--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -201,12 +201,9 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 해결 방법 : **𝑝를중심으로 왼쪽으로 회전하고 𝑝,𝑠의 색상을 바꾼 다음 𝑟의 색상을 블랙으로 바꾼다**
 
-
-
 𝑥를 지나는 경로는 블랙 노드 하나가 추가되었고, 각 번호로 매겨진 나머지 서브트리들의 경로에서는 블랙 노드 수 변화가 없다
 
-또한, p가 어떤 색이든, 전환 후 항상 black인 s와 바꾸기 때문에 p가 반드시 black이 된다 
-
+또한, p가 어떤색이든 전환 후 s를 기준으로한 트리는 black height를 만족한다는 전제 하에 내려왔기 때문에 이 부분만 바꿔줘도 문제 없음 
 
 
 
