--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -198,14 +198,19 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 ![image](https://github.com/user-attachments/assets/a688718d-c28b-44f1-8dae-9382ee189c09)
 
-
 해결 방법 : **𝑝를중심으로 왼쪽으로 회전하고 𝑝,𝑠의 색상을 바꾼 다음 𝑟의 색상을 블랙으로 바꾼다**
 
 𝑥를 지나는 경로는 블랙 노드 하나가 추가되었고, 각 번호로 매겨진 나머지 서브트리들의 경로에서는 블랙 노드 수 변화가 없다
 
 또한, p가 어떤색이든 전환 후 s를 기준으로한 트리는 black height를 만족한다는 전제 하에 내려왔기 때문에 이 부분만 바꿔줘도 문제 없음 
 
+<br/>
 
+## case *-3 
+
+![image](https://github.com/user-attachments/assets/e88ff82a-58d2-48c5-a573-83f3bc325390)
+
+해결 방법 : **𝑠를 기준으로 오른쪽으로 회전시키고𝑠,𝑙의색상을 바꾸면** Case *-2가 되고,Case *-2 방법으로 처리하면 됨
 
 
 
