--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -184,7 +184,7 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 <br/>
 
-## case 1-1 
+## Case 1-1 
 
 ![image](https://github.com/user-attachments/assets/7d8e8668-6ed7-4236-9a99-f3abed0b8bef)
 
@@ -194,7 +194,7 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 <br/>
 
-## case *-2 
+## Case *-2 
 
 ![image](https://github.com/user-attachments/assets/a688718d-c28b-44f1-8dae-9382ee189c09)
 
@@ -206,16 +206,31 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 <br/>
 
-## case *-3 
+## Case *-3 
 
 ![image](https://github.com/user-attachments/assets/e88ff82a-58d2-48c5-a573-83f3bc325390)
 
 해결 방법 : **𝑠를 기준으로 오른쪽으로 회전시키고𝑠,𝑙의색상을 바꾸면** Case *-2가 되고,Case *-2 방법으로 처리하면 됨
 
+<br/>
 
+## Case 2-1
 
+![image](https://github.com/user-attachments/assets/d371802a-188e-43fa-a924-1c879a77d7ba)
 
+해결 방법 : **𝑠의 색상을 블랙에서 레드로 전환함**
 
+**이때, 𝑝에서 경로 상의 블랙 노드 개수 문제가 발생하게 되는데, 𝑝를 새로운 𝑥로 두고 재귀적으로 문제를 해결한다**
+
+<br/>
+
+## Case 2-4 
+
+![image](https://github.com/user-attachments/assets/bc6dfa13-4531-4129-b6a1-46e245f75f75)
+
+해결 방법 : **𝑝를 중심으로 왼쪽으로 회전시키고 𝑝,𝑠의 색상을 바꾼다**
+
+여전히 𝑥를 통과하는 경로 상의 블랙 노드 개수 문제가 남아있지만, 𝑝가 레드 노드가 되어 Case 1에 해당하므로 재귀적으로 문제를 해결할 수 있다
 
 
 
