--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -232,13 +232,23 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 여전히 𝑥를 통과하는 경로 상의 블랙 노드 개수 문제가 남아있지만, 𝑝가 레드 노드가 되어 Case 1에 해당하므로 재귀적으로 문제를 해결할 수 있다
 
+<br/>
 
+## 레드 블랙 트리 시간복잡도 O(logN) 증명
 
+전체의 총수가 n이라는 것은 레드 블랙 트리의 내부 노드의 수가 n임을 뜻한다.
 
+레드나 블랙의 색상을 고려하지 않을 때 가장 이상적으로 꽉 채워진 트리의 깊이는 ⌊log n⌋ + 1이다. (가우스 표현)
 
+그러므로 레드 블랙 트리가 아무리 잘 만들어져도 루트에서 임의의 리프에 이르는 경로에 존재하는 블랙 노드의 개수는 ⌊log n⌋ + 1을 넘을 수 없다
 
+레드 블랙 특성 3에 따라 레드 노드는 두 개가 연속해서 존재할 수 없으므로 루트에서 임의의 리프에 이르는 경로에서 블랙 노드의 개수보다 많을 수 없다
 
+그러므로 루트에서 임의의 리프에 이르는 경로의 길이는 **2(⌊log n⌋ + 1)**을 넘을 수 없다
 
+따라서 키의 총수가 n인 레드 블랙 트리의 가능한 최대 깊이는 **O(log n)**이다.
+
+여기서 log n은 log₂n을 뜻한다.
 
 
 
