--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -250,6 +250,34 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 여기서 log n은 log₂n을 뜻한다.
 
+<br/>
+
+이진 검색 트리의 경우처럼 레드 블랙 트리에서도 트리의 높이 H에 비례한 검색, 삽입 및 삭제 시간이 소요된다
+
+따라서 정리 6-2에 따라 레드 블랙 트리의 검색, 삽입 및 삭제 시간 복잡도는 **평균은 물론 최악의 경우에도 O(log n)이다**
+
+이진 검색 트리의 경우 최악은 O(n)이 나올 수 있는 반면, **균형을 유지한다면 최악의 경우도 O(log n)**
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
