--- a/알고리즘 5-2주차.md
+++ b/알고리즘 5-2주차.md
@@ -155,7 +155,7 @@ T.root.color = BLACK                               // 루트는 항상 검정색
 
 <br/>
 
-## 레드 블랙 트리에서의 삭제
+## 레드 블랙 트리에서의 삭제 (알고리즘 공부하기)
 
 기본적으로는 이진 검색 트리에서의 삭제와 같이 진행하고
 
