--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -1,1 +1,121 @@
-12
+## B 트리 
+
+B-트리: 데이터베이스에 활용되는 트리 구조로써 메모리 상에 모두 올려놓고 사용하는 것이 아닌 **디스크에 저장된 상태로 필요한 부분만 메모리에 로드**하여 활용하기 좋은 자료구조
+
+<br/>
+
+컴퓨터는 데이터를 메모리(RAM)에 접근할 때 매우 빠르지만, 하드디스크(HDD)나 SSD와 같은 디스크에서 데이터를 가져올 때는 상대적으로 시간이 많이 걸림
+
+그래서 디스크에서 데이터를 읽는 횟수를 최소화하는 것이 속도를 높이는 핵심인데 
+
+**B-트리는 한 번에 여러 개의 데이터를 묶어서 하나의 노드에 저장할 수 있다**
+
+<br>
+
+이렇게 하면 같은 양의 데이터를 저장할 때 **일반적인 이진 트리보다 트리의 높이가 낮아지기 때문에**
+
+디스크에서 데이터를 찾을 때, 데이터가 있는 위치를 찾기까지의 **디스크 접근 횟수가 줄어든다**
+
+삽입 및 삭제 과정에서의 연산 횟수가 이진 트리에서보다 줄어드는 효과가 있음 (점근적으로는 같음)
+
+<br/>
+
+이를 기반으로 B-트리의 정의를 말하면 **B-트리는 디스크 기반 환경에서 효율적인 데이터 접근 및 연산 성능을 보장하는 자료구조이다**
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
