--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -51,9 +51,9 @@ CREATE TABLE 학생 (
 
 페이지를 하나씩 다 찾는 것보단 **트리 구조로 값들을 규칙적으로 분배하면 찾는 속도가 빨라지기 때문**
 
+만약 찾고자 하는 키 값이 있다면, 더 아래의 서브트리로 내려가지 않고 페이지 번호를 참조하여 해당 레코드를 읽고
 
-
-
+찾고자 하는 키 값이 없는 경우는 알맞은 서브트리로 내려가서 다시 재귀적으로 검색 수행
 
 <br/>
 
@@ -69,7 +69,29 @@ CREATE TABLE 학생 (
 
 ![image](https://github.com/user-attachments/assets/bc210641-8648-4031-bdeb-3b98f8b02780)
 
+<br/>
 
+## B-트리 알고리즘 
+
+```ruby
+BTreeInsert(t, x)
+{
+    ▷ x를 삽입할 리프 노드 r을 찾는다;
+    ▷ x를 r에 삽입한다;
+
+    if (r에 오버플로우 발생) then clearOverflow(r);
+}
+
+clearOverflow(r)
+{
+    if (r의 형제 노드 중 여유가 있는 노드가 있음) then {
+        ▷ r의 남는 키를 넘긴다;
+    } else {
+        ▷ r을 둘로 분할하고 가운데 키를 부모 노드로 넘긴다;
+        if (부모 노드 p에 오버플로우 발생) then clearOverflow(p);
+    }
+}
+```
 
 
 
