--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -87,8 +87,8 @@ clearOverflow(r)
     if (r의 형제 노드 중 여유가 있는 노드가 있음) then {
         ▷ r의 남는 키를 넘긴다;
     } else {
-        ▷ r을 둘로 분할하고 가운데 키를 부모 노드로 넘긴다;
-        if (부모 노드 p에 오버플로우 발생) then clearOverflow(p);
+        ▷ r을 둘로 분할하고 가운데 키를 부모 노드로 넘긴다;  ▷ 형제 노드까지 꽉 찬 경우
+        if (부모 노드 p에 오버플로우 발생) then clearOverflow(p);  ▷ 부모 노드까지 꽉 찬 경우 -> 재귀적으로 처리 
     }
 }
 ```
