--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -93,9 +93,11 @@ clearOverflow(r)
 }
 ```
 
+<br/>
 
+## B-트리 예시 
 
-
+![BTree_Insert_Merged_2](https://github.com/user-attachments/assets/03f8ac7d-b1e8-4b14-ac65-cc7f5af55d17)
 
 
 
