--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -71,7 +71,7 @@ CREATE TABLE 학생 (
 
 <br/>
 
-## B-트리 알고리즘 
+## B-트리 삽입 알고리즘 
 
 ```ruby
 BTreeInsert(t, x)
@@ -99,11 +99,31 @@ clearOverflow(r)
 
 ![BTree_Insert_Merged_2](https://github.com/user-attachments/assets/03f8ac7d-b1e8-4b14-ac65-cc7f5af55d17)
 
+<br/>
 
+## B-트리 삭제 알고리즘 
 
+```ruby
+BTreeDelete(t, x, v)
+{
+    if (v가 리프 노드 아님) then {
+        x의 직후원소 y를 가진 리프 노드를 찾는다;
+        x와 y를 맞바꾼다;
+    }
+    리프 노드에서 x를 제거하고 이 리프 노드를 r이라 한다;
+    if (r에서 언더플로우 발생) then clearUnderflow(r);
+}
 
-
-
+clearUnderflow(r)
+{
+    if (r의 형제 노드 중 키를 하나 내놓을 수 있는 여분을 가진 노드가 있음)
+        then { r이 키를 넘겨받는다; }
+    else {
+        r의 형제 노드와 r을 합병한다;
+        if (부모 노드 p에 언더플로우 발생) then clearUnderflow(p);
+    }
+}
+```
 
 
 
