--- a/알고리즘 6-1주차.md
+++ b/알고리즘 6-1주차.md
@@ -119,7 +119,7 @@ clearUnderflow(r)
     if (r의 형제 노드 중 키를 하나 내놓을 수 있는 여분을 가진 노드가 있음)
         then { r이 키를 넘겨받는다; }
     else {
-        r의 형제 노드와 r을 합병한다;
+        r의 형제 노드와 r을 합병한다;     ▷ 이때 r과 r의 형제 노드 사이에 있는 부모 노드의 값도 같이 합병함
         if (부모 노드 p에 언더플로우 발생) then clearUnderflow(p);
     }
 }
