--- a/알고리즘 6-1주차.md
+++ b/알고리즘 6-1주차.md
@@ -125,12 +125,31 @@ clearUnderflow(r)
 }
 ```
 
+<br/>
 
+## 예시 
 
+![BTree_Deletion_Combined](https://github.com/user-attachments/assets/c563370e-f4a8-4bc5-b6ba-68bfb72657e5)
 
+<br/>
 
+## B 트리 높이 및 시간복잡도 
 
+결과부터 말하자면, B트리의 시간 복잡도는 O(logn)이다 
 
+B-트리에서의 임의의 노드가 𝑑개의 자식을 가질 수 있다면 최소 d/2개의 자식이 있음
+
+여기서 key 값이 아니라 자식 값에 대한 설명임을 주의하자 
+
+예를 들어 임의의 노드가 4개의 자식을 가질 수 있다면, key 값은 3이다 (이래야 사이사이에 자식이 생겨서 4개가 되기 때문)
+
+<br/>
+
+![image](https://github.com/user-attachments/assets/d21dfd33-9fac-4e47-8437-7c567b019731)
+
+**즉, 트리의 높이는 log(d/2)n 과 log(d)n 사이가 된다**
+
+따라서 탐색의 최대 소요 시간은 log(d)n 이고(노드가 최소 자식만 가질 때) 이때, **d는 상수이므로 시간복잡도는 O(logn)이다**
 
 
 
