--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -8,6 +8,60 @@ B-트리는 한 단계에 수십~수백 개 자식 가능하여 탐색 시간이
 
 빠르다는 말은 이진 트리보다 상수 시간이 작아서 시간 복잡도는 같으나 실제 성능은 B트리가 좀 더 좋다는 뜻임 
 
+<br/>
+
+## 해시 테이블 
+
+**해시 테이블 : 원소가 저장될 자리가 원소의 값에 의해 결정되는 자료구조**
+
+트리에서도 값에 의해 위치가 달라지는 것 같지만 그건 트리를 그렸을 때의 위치이며 메모리 상에서의 위치는 키 값에 따라 달라지는 것이 아님
+
+즉, **트리의 위치는 메모리의 위치와 무관함**
+
+<br/>
+
+트리의 내부 구조를 예시로 표현하면 
+
+```ruby
+Node(10) → 주소 0xA1
+Node(5)  → 주소 0xDE
+Node(20) → 주소 0x73
+```
+
+단지 Node(10).left = 0xB7 이런 식으로 포인터로 연결되는 것뿐 메모리와는 무관함 
+
+트리는 원하고자 하는 값을 찾은 뒤에 해당 메모리에 접근하는 것 
+
+<br/>
+
+반면에 **해시 테이블은 해당 값에 직접적으로 대응하는 주소에 저장됨**
+
+따라서 **내가 찾고자 하는 값 입력하면, 바로 메모리에 접근할 수 있음**
+
+<br/>
+
+## 해시테이블 장단점 
+
+장점 :  **탐색 속도가 매우 빠름 -> 평균 O(1)**
+
+단점 : **정렬 불가, 최대 최소 찾는데 오래걸림**
+
+<br/>
+
+해시 테이블과 비교하여 트리는 구조를 구성하는데 해시 테이블보다 시간이 좀 더 소요되지만
+
+이렇게 만들어 놓으면, **정렬도 편리하고, 최대 최소를 찾는데 유리하다**
+
+추가적으로 해시 테이블은 애초에 최소 원소를 찾는 것과 같은 작업은 지원하지 않는다 
+
+<br/>
+
+## 정리 
+
+![image](https://github.com/user-attachments/assets/c512f903-30f9-43c0-8696-f6b06ababca4)
+
+
+
 
 
 
