--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -60,7 +60,15 @@ Node(20) → 주소 0x73
 
 ![image](https://github.com/user-attachments/assets/c512f903-30f9-43c0-8696-f6b06ababca4)
 
+<br/>
 
+## 적재율 
+
+적재율 : **해시 테이블에 원소가 차 있는 비율** -> 해시 테이블의 성능에 큰 영향을 끼침
+
+적재율 = 사용중인 공간 / 전체공간
+
+<br/>
 
 
 
