--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -70,9 +70,45 @@ Node(20) → 주소 0x73
 
 <br/>
 
+## 해시 함수 
 
+해시 함수 : 임의의 키 값을 입력받은 후 일정한 구간 내의 값(해시 테이블 상의 주소)으로 변환하는 함수
 
+아래와 같은 두 가지 성질을 만족하여야 함
 
+<br/>
+
+1. 입력 원소가 해시 테이블 전체에 골고루 저장될 수 있도록 해야 함
+
+2. 계산이 간단해야 함
+
+<br/>
+
+첫 번째 조건이 굉장히 중요하며, 만약 서로 다른 키 값들에 대해서 같은 주소값을 반환하게 되면 충돌이 발생하여 해시 테이블의 성능이 저하됨
+
+<br/>
+
+## 해시 함수 예시 
+
+예시를 위해 단순하게  해시 테이블의 크기로 mod 연산을 수행
+
+**ℎ(𝑥)=𝑥mod𝑚**
+
+이 때, 일반적으로𝑚은 2의 멱수(2𝑝)에 가깝지 않은 소수로 설정함. 그 이유를 아래 예시를 통해 살펴보자 
+
+<br/>
+
+```ruby
+            100                 ← 몫 (100₂ = 4 in decimal)
+       ---------
+10000 ) 1000101
+         10000               ← 1 × 10000 = 10000 (16)
+         ------
+          000101
+           00000             ← 0 × 10000 = 00000
+           ------
+            00101            ← 나머지 (하위 비트)
+```
 
 
 
