--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -110,7 +110,13 @@ Node(20) → 주소 0x73
             00101            ← 나머지 (하위 비트)
 ```
 
+위 예시와 같이 2의 제곱수는 이진수에서 k000..00 꼴이다
 
+따라서 나눗셈을 할 때 더이상 나눠지지 않은 부분은 k이하인데 
+
+이 말은 k이하의 부분이 동일하면 **같은 해시 값을 갖는다는 의미이고 즉, 충돌 위험성이 커진다는 의미이다**
+
+그래서 일반적으로 2의 제곱수에 가까운 소수를 택함 -> 소수는 이러한 현상 덜해서 충돌 위험성도 줄여줌(충돌이 존재하긴 함)
 
 
 
