--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -118,6 +118,39 @@ Node(20) → 주소 0x73
 
 그래서 일반적으로 2의 제곱수에 가까운 소수를 택함 -> 소수는 이러한 현상 덜해서 충돌 위험성도 줄여줌(충돌이 존재하긴 함)
 
+<br/>
+
+## 곱하기 방법 
+
+## h(x)=⌊m⋅(x⋅Amod1)⌋
+
+위에서 한 내용이 나누기 방법이라면 이번에 할 것은 곱하기 방법이다 
+
+나누기 방법은 큰 수를 해시 테이블 크기 범위 내로 들어오도록 축소시키지만, 
+
+곱하기 방법은 입력값을 0과 1 사이의 소수로 대응시킨 다음 𝑚을 곱하여 0과 𝑚−1사이로 팽창시킴
+
+<br/>
+
+**위 함수의 각 원소 설명**
+
+- x : 입력값
+
+- A: 0 < A < 1인 임의의 값 
+
+- mod 1 : 소수 부분을 구하기 위함 -> 나누기는 빼기의 반복
+
+- m : 소수 부분에 곱해줄 임의의 값
+
+<br/>
+
+## 곱하기 방법 장점 
+
+**1. 충돌이 줄어든다**
+
+**2. 균등하게 만들어줌**
+
+𝑚값은 어떻게 잡아도 성능에 큰 영향이 없고, **𝐴값에 따라 해시 값 분포가 달라짐**
 
 
 
