--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -152,11 +152,41 @@ Node(20) → 주소 0x73
 
 𝑚값은 어떻게 잡아도 성능에 큰 영향이 없고, **𝐴값에 따라 해시 값 분포가 달라짐**
 
+<br/>
 
+## 예시 
 
+해시 함수 : h(x)=⌊m⋅(x⋅Amod1)⌋
 
+입력값 : x=123
 
+테이블 크기 : m=16
 
+상수 A=0.6180339887 (→ 황금비의 역수 ≈ 무작위성 좋음)
+
+<br/>
+
+**1. x 곱하기 A**
+
+123⋅0.6180339887 = 76.0171806
+
+<br/>
+
+**2. 소수 부분만 추출**
+
+76.0171806mod1 = 0.0171806
+
+<br/>            
+
+**3. m 곱하기 소수 부분**
+
+16⋅0.0171806 = 0.2748896
+
+<br/>
+
+**4. 정수 부분만 취하기**
+
+⌊0.2748896⌋ = 0
 
 
 
