--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -124,6 +124,8 @@ Node(20) → 주소 0x73
 
 ## h(x)=⌊m⋅(x⋅Amod1)⌋
 
+![image](https://github.com/user-attachments/assets/e5040a5e-1521-45c8-8d5a-085a0cc17c7e)
+
 위에서 한 내용이 나누기 방법이라면 이번에 할 것은 곱하기 방법이다 
 
 나누기 방법은 큰 수를 해시 테이블 크기 범위 내로 들어오도록 축소시키지만, 
@@ -188,6 +190,59 @@ Node(20) → 주소 0x73
 
 ⌊0.2748896⌋ = 0
 
+<br/>
+
+## 충돌 
+
+충돌 : 1해시 테이블의 한 주소를 놓고 두 개 이상의 원소가 자리를 다투는 것
+
+충돌 해결 방법은 크게 두 가지가 있다
+
+1. 체이닝(Chaining)
+
+2. 개방주소 방법(Open Addressing)
+
+<br/>
+
+## 체이닝 
+
+체이닝 기법 : 같은 해시값을 가지는 여러 데이터를 **연결 리스트로 이어서 저장하는 충돌 해결 방법**
+
+체이닝 기법은 다음과 같은 특징을 갖는다 
+
+**1. 해시 테이블 외에 추가적인 메모리가 필요함**
+
+**2. 적재율이 1이 넘어가도 작동에는 문제 없음**
+
+<br/>
+
+여기서 **적재율이 1이 넘어가도 작동에 문제가 없다는 것은 효율적이라는 의미가 아니다**
+
+이 경우 상수시간을 보장하지 않은 경우가 많음
+
+<br/>
+
+## 체이닝 알고리즘 
+
+```ruby
+chainedHashInsert(T[ ], x)
+▷ T : 해시 테이블, x : 삽입 원소
+{
+    리스트 T[h(x)]의 맨 앞에 x를 삽입;
+}
+
+chainedHashSearch(T[ ], x)
+▷ T : 해시 테이블, x : 검색 원소
+{
+    리스트 T[h(x)]에서 x값을 가지는 원소를 검색;
+}
+
+chainedHashDelete(T[ ], x)
+▷ T : 해시 테이블, x : 삭제 원소
+{
+    리스트 T[h(x)]에서 x의 노드를 삭제;
+}
+```
 
 
 
