--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -228,7 +228,7 @@ Node(20) → 주소 0x73
 chainedHashInsert(T[ ], x)
 ▷ T : 해시 테이블, x : 삽입 원소
 {
-    리스트 T[h(x)]의 맨 앞에 x를 삽입;
+    리스트 T[h(x)]의 맨 앞에 x를 삽입;     ▷ 해당 알고리즘은 맨 앞을 기준으로 함, 맨 뒤도 가능 
 }
 
 chainedHashSearch(T[ ], x)
