--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -246,7 +246,7 @@ chainedHashDelete(T[ ], x)
 
 만약 체이닝 기법을 연결 리스트가 아니라 배열로 구현한다면, 하나를 삭제할 때마다 모든 노드를 다 앞으로 옮겨야함 -> 복잡 + 번거로움
 
-
+따라서 체이닝 기법은 연결리스트 사용 -> 관계로 구성되어 있기 때문에 다음 노드만 정해주면 됨 
 
 
 
