--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -248,10 +248,76 @@ chainedHashDelete(T[ ], x)
 
 따라서 체이닝 기법은 연결리스트 사용 -> 관계로 구성되어 있기 때문에 다음 노드만 정해주면 됨 
 
+<br/>
+
+## 개방 주소 방법 
+
+개방 주소의 배경은 충돌이 일어나더라도 어떻게든 **주어진 테이블 공간 내에서 해결하기 위해 다른 해시값을 도출하는 것이다**
+
+해시 테이블 외에 **추가적인 메모리가 필요하지 않음 -> 내부에서 해결하기 때문**
+
+대표적으로 3가지 방법이 존재한다 
+
+1. 선형 조사
+
+2. 이차원 조사
+
+3. 더블 해싱
+
+<br/>
+
+## 선형 조사
+
+선형 조사 : **충돌이 발생하면 다음 칸으로 계속 이동하여** 빈 칸이 생기면 입력하는 방식
+
+탐색할 때는 처음에 해시 값의 주소로 이동하여 찾고자 하는 값이 없으면 다음 칸을 찾는식으로 빈 칸이 나올때까지 탐색
+
+빈 칸이 나올때까지 없다면 테이블 내에 해당 키 값은 없는 상태이다 
+
+<br/>
+
+## 선형 조사 예시 
+
+![image](https://github.com/user-attachments/assets/5778530f-4fb7-4b90-afaf-8af17e5f9c3f)
+
+위 함수에서 i는 처음 충돌이 발생하면 i=1 , 그 다음에도 발생하면 i=2로 위치값이 하나씩 올림
+
+<br/>
+
+## 선형 조사 문제점
+
+선형 조사의 단점은 **특정 영역에 원소가 몰리는 1차 군집에 취약하다**
+
+여기서 1차 군집이란, 특정 영역에 원소가 몰리는 현상을 의미한다
+
+이 경우 검색을 할 때, O(n)의 시간이 소요될 수 있어서 상수 시간을 보장하지 못한다. -> 거의 안씀 
+
+<br/>
+
+이런 선형 조사를 해결하기 위해 나온 것이 이차원 조사이다 
+
+<br/>
+
+## 이차원 조사 
+
+![image](https://github.com/user-attachments/assets/61d28634-9ab7-426b-bada-e17328f809e8)
+
+선형 조사에서는 i의 값이 1씩 증가하였지만 이차원 조사에서는 i의 제곱이므로 
+
+첫 충돌에는 위치가 +1 그 다음은 +4, 그 다음은 +9, ... + i^2 으로 기하급수적으로 옮김 -> 빠르게 처음 해시 영역을 벗어남 
+
+<br/>
+
+## 이차원 조사 문제점 
+
+이차원 조사는 테이블 내의 인접 구간에 값들이 몰려있는 1차군집은 빠르게 벗어나지만
+
+여러 키 값들이 동일한 초기 해시 함수값을 갖게되는 2차군집에는 취약함
 
 
+- 1차 군집: 꼭 해시값이 같진 않더라도 인접한 영역에 몰리게 되는 경우
 
-
+- 2차 군집: 초기 해시값이 같은 경우가 대량 발생
 
 
 
