Update 알고리즘 6-2주차.md\

--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -319,8 +319,9 @@ chainedHashDelete(T[ ], x)
 
 - 2차 군집: 초기 해시값이 같은 경우가 대량 발생
 
+<br/>
 
-
+즉, 2차 군집은 여러 개의 키가 같은 해시값을 가지는 경우, **이차원 조사의 특성상 탐색 경로가 완전히 똑같이 겹치면서** 특정 슬롯들에 충돌이 집중되는 현상
 
 
 
