--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -323,15 +323,37 @@ chainedHashDelete(T[ ], x)
 
 즉, 2차 군집은 여러 개의 키가 같은 해시값을 가지는 경우, **이차원 조사의 특성상 탐색 경로가 완전히 똑같이 겹치면서** 특정 슬롯들에 충돌이 집중되는 현상
 
+<br/>
 
+## 더블 해싱
 
+충돌이 발생할 때마다 **두 번째 해시 함수값을 이용해서 이동 거리를 결정하는 방식**
 
+![image](https://github.com/user-attachments/assets/b4c6a83e-1a73-471f-af5a-a21bc6d38195)
 
+<br/>
 
+**함수 설명**
 
+- h(x): 기본 해시 함수
 
+- f(x): 두 번째 해시 함수
 
+- i: 충돌 횟수
 
+- m: 해시 테이블 크기
+
+<br/>
+
+**즉, 충돌할 때마다 f(x)만큼 떨어진 위치로 이동**
+
+위 예시에서 h(𝑥) 에 대해 두 키 값의 해시 값이 같더라도 f(x) 에 대해서까지 해시 값이 같을 확률은 낮다
+
+오른쪽 예시에서는 13과 11의 공배수인 키 값이 등장하면 선형 조사 방식으로 충돌을 해결하게 됨
+
+f(x) 에서의 +1 항이 없으면 13과 11의 공배수에 대해선 충돌 해결 방법이 없음
+
+![IMG_3098](https://github.com/user-attachments/assets/5cc4fca0-4b8e-4166-ab41-566b6bd4afe4)
 
 
 
