--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -252,6 +252,8 @@ chainedHashDelete(T[ ], x)
 
 ## 개방 주소 방법 
 
+개방 주소 정의 : 충돌이 발생했을 때, **해시 테이블 내부의 다른 빈 칸을 직접 찾아가서 저장하는 방식**
+
 개방 주소의 배경은 충돌이 일어나더라도 어떻게든 **주어진 테이블 공간 내에서 해결하기 위해 다른 해시값을 도출하는 것이다**
 
 해시 테이블 외에 **추가적인 메모리가 필요하지 않음 -> 내부에서 해결하기 때문**
@@ -355,11 +357,57 @@ f(x) 에서의 +1 항이 없으면 13과 11의 공배수에 대해선 충돌 해
 
 ![IMG_3098](https://github.com/user-attachments/assets/5cc4fca0-4b8e-4166-ab41-566b6bd4afe4)
 
+<br/>
 
+## 개방 주소 특징 
 
+**개방 주소의 적재율은 절대 1을 넘을 수 없다** ->  테이블 안에만 데이터를 저장하기 때문에 적재율이 1(= 꽉 찼다)이 되면 더 이상 삽입 불가능
 
+따라서 적재율이 1에 가까워지면 효율 급감한다 -> 테이블이 꽉 차기 직전에는 충돌도 많이 발생하고, 빈 칸 찾느라 탐색 시간이 오래 걸림
 
+이 경우 **해결책은 테이블 크기를 2배로 늘리고, 모든 원소를 새롭게 해시테이블에 넣는 것이다**
 
+<br/>
+
+## 개방 주소 알고리즘 
+
+```ruby
+hashInsert(T[ ], x)
+{
+    i ← 0;
+    repeat {
+        j ← hᵢ(x);
+        if (T[j] = NIL)
+            then { T[j] ← x; return j; }
+        else i++;
+    } until (i = m)
+    error "테이블 오버플로";
+}
+
+hashSearch(T[ ], x)
+{
+    i ← 0;
+    repeat {
+        j ← hᵢ(x);
+        if (T[j] = x)
+            then return j;
+        else i++;
+    } until (T[j] = NIL or i = m)
+    return NIL;
+}
+```
+
+<br/>
+
+## 개방 주소 삭제 
+
+개방 주소에서 원소를 삭제할 때는 **삭제된 칸이라는 표식(DELETED) 이 반드시 필요**
+
+만약 어떤 값을 삭제했을 때, 남아 있는 값들은 그 자리에서 충돌이 생겨 넘어온 값일 수 있음 
+
+삭제했을 때, 어떠한 표식도 안 해놓으면, 남아 있는 값을 찾기 위해 처음 충돌된 곳을 방문했을 때, 그냥 값이 없다고 나와버림 
+
+따라서 delete(표식)을 해야 컴퓨터가 남아 있는 값들을 찾을 때, 안심하고 다음 값으로 넘어갈 수 있음 
 
 
 
