--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -409,15 +409,39 @@ hashSearch(T[ ], x)
 
 따라서 delete(표식)을 해야 컴퓨터가 남아 있는 값들을 찾을 때, 안심하고 다음 값으로 넘어갈 수 있음 
 
+<br/>
 
+## 각 충돌 해결 방법의 장단점 
 
+**이론적으로는 체이닝이 평균적으로 더 효율적이다**
 
+개방주소 방법의 경우 직접적으로 충돌하지 않는 원소라도 검색 과정을 방해하기도 함
 
+체이닝은 각 슬롯마다 연결 리스트를 사용하므로 충돌이 나더라도 다른 슬롯 탐색 없이 그 슬롯의 리스트만 보면 됨
 
+개방 주소 기법은 충돌이 안 났던 데이터라도, 탐색 과정에서 무조건 훑게 됨
 
+<br/>
 
+하지만 **체이닝은 추가 저장공간(포인터 등)이 필요**
 
+또한, 메모리를 더 쓰고, 포인터로 연결된 리스트를 관리해야 하므로 시간도 더 소요된다 
+            
+리스트 조작에는 연산 비용이 필요 (동적 메모리, 연결 관리 등)
 
+캐시 친화도 ↓ → 메모리 접근 느릴 수 있음
+
+<br/>
+
+**적재율이 낮을 경우 개방주소법이 더 매력적일 수 있음**
+
+체이닝은 해시 테이블 슬롯 수보다 원소가 많아도 저장 가능하지만 
+
+앞에서부터 쌓이기 때문에 검색 시간이 점점 늘어남
+
+적재율이 높아지면 리스트가 길어지고,
+
+검색 성능이 저하되므로 → 결국 해시 테이블 확장 필요
 
 
 
