--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -8,26 +8,31 @@
 
 ## 관련 연산 
 
-Make-Set(x)
+- Make-Set(x) : 원소 x만 포함하는 집합을 생성함. 초기에는 모든 원소가 각각의 집합에 속한다
 
-원소 x만 포함하는 집합을 생성합니다.
+- Find-Set(x) :  원소 x가 속한 집합의 대표 원소를 반환. 
 
-초기에는 모든 원소가 각각의 집합에 속합니다.
+- Union(x, y) : 원소 x가 포함된 집합과 원소 y가 포함된 집합을 병합하여 하나의 집합으로 만듦
 
-Find-Set(x)
+<br>
 
-원소 x가 속한 집합의 대표 원소를 반환합니다.
+## 간단한 예시 
 
-집합을 찾을 때 경로 압축(path compression) 기법을 사용하면 효율적입니다.
+```ruby
+## 각 원소 생성 -> 초기 상태는 각각의 집합으로 이루어짐 
+Make-Set(1)
+Make-Set(2)
+Make-Set(3)
+Make-Set(4)
+Make-Set(5)
 
-Union(x, y)
-
-원소 x가 포함된 집합과 원소 y가 포함된 집합을 병합하여 하나의 집합으로 만듭니다.
-
-보통 랭크(rank)를 기준으로 더 작은 트리를 큰 트리 밑에 붙이는 방식 (union by rank)을 사용합니다.
+## 위 코드 결과
+1    2    3    4    5
 
 
-
+## 만약 1과 2를 병합하고 싶다면 아래와 같이 코드를 작성하면 됨
+Union(1, 2)
+```
 
 
 
